First commited as before_62565_rev1