@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2005, 2016 IBM Corporation and others.
+ * Copyright (c) 2005, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -114,7 +114,7 @@ public final class DefaultOperationHistory implements IOperationHistory {
 	/**
 	 * the list of {@link IOperationApprover}s
 	 */
-	ListenerList<IOperationApprover> approvers = new ListenerList<>(ListenerList.IDENTITY);
+	ListenerList approvers = new ListenerList(ListenerList.IDENTITY);
 
 	/**
 	 * a map of undo limits per context
@@ -124,7 +124,7 @@ public final class DefaultOperationHistory implements IOperationHistory {
 	/**
 	 * the list of {@link IOperationHistoryListener}s
 	 */
-	ListenerList<IOperationHistoryListener> listeners = new ListenerList<>(ListenerList.IDENTITY);
+	ListenerList listeners = new ListenerList(ListenerList.IDENTITY);
 
 	/**
 	 * the list of operations available for redo, LIFO
@@ -162,6 +162,11 @@ public final class DefaultOperationHistory implements IOperationHistory {
 		super();
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.core.commands.operations.IOperationHistory#add(org.eclipse.core.commands.operations.IUndoableOperation)
+	 */
 	@Override
 	public void add(IUndoableOperation operation) {
 		Assert.isNotNull(operation);
@@ -189,8 +194,8 @@ public final class DefaultOperationHistory implements IOperationHistory {
 
 			// flush redo stack for related contexts
 			IUndoContext[] contexts = operation.getContexts();
-			for (IUndoContext context : contexts) {
-				flushRedo(context);
+			for (int i = 0; i < contexts.length; i++) {
+				flushRedo(contexts[i]);
 			}
 		} else {
 			// Dispose the operation since we will not have a reference to it.
@@ -247,6 +252,11 @@ public final class DefaultOperationHistory implements IOperationHistory {
 		listeners.add(listener);
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.core.commands.operations.IOperationHistory#canRedo(org.eclipse.core.commands.operations.IUndoContext)
+	 */
 	@Override
 	public boolean canRedo(IUndoContext context) {
 		// null context is allowed and passed through
@@ -254,6 +264,11 @@ public final class DefaultOperationHistory implements IOperationHistory {
 		return (operation != null && operation.canRedo());
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.core.commands.operations.IOperationHistory#canUndo(org.eclipse.core.commands.operations.IUndoContext)
+	 */
 	@Override
 	public boolean canUndo(IUndoContext context) {
 		// null context is allowed and passed through
@@ -272,13 +287,13 @@ public final class DefaultOperationHistory implements IOperationHistory {
 	 */
 	private boolean checkRedoLimit(IUndoableOperation operation) {
 		IUndoContext[] contexts = operation.getContexts();
-		for (IUndoContext context : contexts) {
-			int limit = getLimit(context);
+		for (int i = 0; i < contexts.length; i++) {
+			int limit = getLimit(contexts[i]);
 			if (limit > 0) {
-				forceRedoLimit(context, limit - 1);
+				forceRedoLimit(contexts[i], limit - 1);
 			} else {
 				// this context has a 0 limit
-				operation.removeContext(context);
+				operation.removeContext(contexts[i]);
 			}
 		}
 		return operation.getContexts().length > 0;
@@ -290,18 +305,24 @@ public final class DefaultOperationHistory implements IOperationHistory {
 	 */
 	private boolean checkUndoLimit(IUndoableOperation operation) {
 		IUndoContext[] contexts = operation.getContexts();
-		for (IUndoContext context : contexts) {
-			int limit = getLimit(context);
+		for (int i = 0; i < contexts.length; i++) {
+			int limit = getLimit(contexts[i]);
 			if (limit > 0) {
-				forceUndoLimit(context, limit - 1);
+				forceUndoLimit(contexts[i], limit - 1);
 			} else {
 				// this context has a 0 limit
-				operation.removeContext(context);
+				operation.removeContext(contexts[i]);
 			}
 		}
 		return operation.getContexts().length > 0;
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.core.commands.operations.IOperationHistory#dispose(org.eclipse.core.commands.operations.IUndoContext,
+	 *      boolean, boolean, boolean)
+	 */
 	@Override
 	public void dispose(IUndoContext context, boolean flushUndo, boolean flushRedo, boolean flushContext) {
 		// dispose of any limit that was set for the context if it is not to be
@@ -442,6 +463,13 @@ public final class DefaultOperationHistory implements IOperationHistory {
 		return status;
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.core.commands.operations.IOperationHistory#execute(org.eclipse.core.commands.operations.IUndoableOperation,
+	 *      org.eclipse.core.runtime.IProgressMonitor,
+	 *      org.eclipse.core.runtime.IAdaptable)
+	 */
 	@Override
 	public IStatus execute(IUndoableOperation operation, IProgressMonitor monitor, IAdaptable info)
 			throws ExecutionException {
@@ -551,8 +579,8 @@ public final class DefaultOperationHistory implements IOperationHistory {
 		synchronized (undoRedoHistoryLock) {
 
 			Object[] filtered = filter(redoList, context);
-			for (Object element : filtered) {
-				IUndoableOperation operation = (IUndoableOperation) element;
+			for (int i = 0; i < filtered.length; i++) {
+				IUndoableOperation operation = (IUndoableOperation) filtered[i];
 				if (context == GLOBAL_UNDO_CONTEXT || operation.getContexts().length == 1) {
 					// remove the operation if it only has the context or we are
 					// flushing all
@@ -564,9 +592,10 @@ public final class DefaultOperationHistory implements IOperationHistory {
 					// It is not enough to simply remove the context. There could
 					// be one or more contexts that match the one we are trying to
 					// dispose.
-					for (IUndoContext undoContext : operation.getContexts()) {
-						if (undoContext.matches(context)) {
-							operation.removeContext(undoContext);
+					IUndoContext[] contexts = operation.getContexts();
+					for (int j = 0; j < contexts.length; j++) {
+						if (contexts[j].matches(context)) {
+							operation.removeContext(contexts[j]);
 						}
 					}
 					if (operation.getContexts().length == 0) {
@@ -590,8 +619,8 @@ public final class DefaultOperationHistory implements IOperationHistory {
 
 			// Get all operations that have the context (or one that matches)
 			Object[] filtered = filter(undoList, context);
-			for (Object element : filtered) {
-				IUndoableOperation operation = (IUndoableOperation) element;
+			for (int i = 0; i < filtered.length; i++) {
+				IUndoableOperation operation = (IUndoableOperation) filtered[i];
 				if (context == GLOBAL_UNDO_CONTEXT || operation.getContexts().length == 1) {
 					// remove the operation if it only has the context or we are
 					// flushing all
@@ -603,9 +632,10 @@ public final class DefaultOperationHistory implements IOperationHistory {
 					// It is not enough to simply remove the context. There could
 					// be one or more contexts that match the one we are trying to
 					// dispose.
-					for (IUndoContext undoContext : operation.getContexts()) {
-						if (undoContext.matches(context)) {
-							operation.removeContext(undoContext);
+					IUndoContext[] contexts = operation.getContexts();
+					for (int j = 0; j < contexts.length; j++) {
+						if (contexts[j].matches(context)) {
+							operation.removeContext(contexts[j]);
 						}
 					}
 					if (operation.getContexts().length == 0) {
@@ -708,6 +738,11 @@ public final class DefaultOperationHistory implements IOperationHistory {
 		}
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.core.commands.operations.IOperationHistory#getLimit()
+	 */
 	@Override
 	public int getLimit(IUndoContext context) {
 		if (!limits.containsKey(context)) {
@@ -722,7 +757,10 @@ public final class DefaultOperationHistory implements IOperationHistory {
 	 */
 	private IStatus getRedoApproval(IUndoableOperation operation, IAdaptable info) {
 
-		for (IOperationApprover approver : approvers) {
+		final Object[] approverArray = approvers.getListeners();
+
+		for (int i = 0; i < approverArray.length; i++) {
+			IOperationApprover approver = (IOperationApprover) approverArray[i];
 			IStatus approval = approver.proceedRedoing(operation, this, info);
 			if (!approval.isOK()) {
 				if (DEBUG_OPERATION_HISTORY_APPROVAL) {
@@ -737,12 +775,22 @@ public final class DefaultOperationHistory implements IOperationHistory {
 		return Status.OK_STATUS;
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.core.commands.operations.IOperationHistory#getRedoHistory(org.eclipse.core.commands.operations.IUndoContext)
+	 */
 	@Override
 	public IUndoableOperation[] getRedoHistory(IUndoContext context) {
 		Assert.isNotNull(context);
 		return filter(redoList, context);
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.core.commands.operations.IOperationHistory#getOperation(org.eclipse.core.commands.operations.IUndoContext)
+	 */
 	@Override
 	public IUndoableOperation getRedoOperation(IUndoContext context) {
 		Assert.isNotNull(context);
@@ -763,7 +811,10 @@ public final class DefaultOperationHistory implements IOperationHistory {
 	 */
 	private IStatus getUndoApproval(IUndoableOperation operation, IAdaptable info) {
 
-		for (IOperationApprover approver : approvers) {
+		final Object[] approverArray = approvers.getListeners();
+
+		for (int i = 0; i < approverArray.length; i++) {
+			IOperationApprover approver = (IOperationApprover) approverArray[i];
 			IStatus approval = approver.proceedUndoing(operation, this, info);
 			if (!approval.isOK()) {
 				if (DEBUG_OPERATION_HISTORY_APPROVAL) {
@@ -778,12 +829,22 @@ public final class DefaultOperationHistory implements IOperationHistory {
 		return Status.OK_STATUS;
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.core.commands.operations.IOperationHistory#getUndoHistory(org.eclipse.core.commands.operations.IUndoContext)
+	 */
 	@Override
 	public IUndoableOperation[] getUndoHistory(IUndoContext context) {
 		Assert.isNotNull(context);
 		return filter(undoList, context);
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.core.commands.operations.IOperationHistory#getUndoOperation(org.eclipse.core.commands.operations.IUndoContext)
+	 */
 	@Override
 	public IUndoableOperation getUndoOperation(IUndoContext context) {
 		Assert.isNotNull(context);
@@ -806,9 +867,11 @@ public final class DefaultOperationHistory implements IOperationHistory {
 	 */
 	private IStatus getExecuteApproval(IUndoableOperation operation, IAdaptable info) {
 
-		for (IOperationApprover tmp : approvers) {
-			if (tmp instanceof IOperationApprover2) {
-				IOperationApprover2 approver = (IOperationApprover2) tmp;
+		final Object[] approverArray = approvers.getListeners();
+
+		for (int i = 0; i < approverArray.length; i++) {
+			if (approverArray[i] instanceof IOperationApprover2) {
+				IOperationApprover2 approver = (IOperationApprover2) approverArray[i];
 				IStatus approval = approver.proceedExecuting(operation, this, info);
 				if (!approval.isOK()) {
 					if (DEBUG_OPERATION_HISTORY_APPROVAL) {
@@ -853,7 +916,9 @@ public final class DefaultOperationHistory implements IOperationHistory {
 				}
 			});
 		}
-		for (final IOperationHistoryListener listener : listeners) {
+		final Object[] listenerArray = listeners.getListeners();
+		for (int i = 0; i < listenerArray.length; i++) {
+			final IOperationHistoryListener listener = (IOperationHistoryListener) listenerArray[i];
 			SafeRunner.run(new ISafeRunnable() {
 				@Override
 				public void handleException(Throwable exception) {
@@ -990,6 +1055,13 @@ public final class DefaultOperationHistory implements IOperationHistory {
 		notifyListeners(new OperationHistoryEvent(OperationHistoryEvent.OPERATION_CHANGED, this, operation));
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.core.commands.operations.IOperationHistory#redo(org.eclipse.core.commands.operations.IUndoContext,
+	 *      org.eclipse.core.runtime.IProgressMonitor,
+	 *      org.eclipse.core.runtime.IAdaptable)
+	 */
 	@Override
 	public IStatus redo(IUndoContext context, IProgressMonitor monitor, IAdaptable info) throws ExecutionException {
 		Assert.isNotNull(context);
@@ -1012,6 +1084,13 @@ public final class DefaultOperationHistory implements IOperationHistory {
 		return doRedo(monitor, info, operation);
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.core.commands.operations.IOperationHistory#redoOperation(org.eclipse.core.commands.operations.IUndoableOperation,
+	 *      org.eclipse.core.runtime.IProgressMonitor,
+	 *      org.eclipse.core.runtime.IAdaptable)
+	 */
 	@Override
 	public IStatus redoOperation(IUndoableOperation operation, IProgressMonitor monitor, IAdaptable info)
 			throws ExecutionException {
@@ -1028,16 +1107,32 @@ public final class DefaultOperationHistory implements IOperationHistory {
 		return status;
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.core.commands.operations.IOperationHistory#removeOperationApprover(org.eclipse.core.commands.operations.IOperationApprover)
+	 */
 	@Override
 	public void removeOperationApprover(IOperationApprover approver) {
 		approvers.remove(approver);
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.core.commands.operations.IOperationHistory#removeOperationHistoryListener(org.eclipse.core.commands.operations.IOperationHistoryListener)
+	 */
 	@Override
 	public void removeOperationHistoryListener(IOperationHistoryListener listener) {
 		listeners.remove(listener);
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.core.commands.operations.IOperationHistory#replaceOperation(org.eclipse.core.commands.operations.IUndoableOperation,
+	 *      org.eclipse.core.commands.operations.IUndoableOperation [])
+	 */
 	@Override
 	public void replaceOperation(IUndoableOperation operation, IUndoableOperation[] replacements) {
 		// check the undo history first.
@@ -1049,12 +1144,12 @@ public final class DefaultOperationHistory implements IOperationHistory {
 				undoList.remove(operation);
 				// notify listeners after the lock on undoList is released
 				ArrayList<IUndoContext> allContexts = new ArrayList<>(replacements.length);
-				for (IUndoableOperation replacement : replacements) {
-					IUndoContext[] opContexts = replacement.getContexts();
-					for (IUndoContext opContext : opContexts) {
-						allContexts.add(opContext);
+				for (int i = 0; i < replacements.length; i++) {
+					IUndoContext[] opContexts = replacements[i].getContexts();
+					for (int j = 0; j < opContexts.length; j++) {
+						allContexts.add(opContexts[j]);
 					}
-					undoList.add(index, replacement);
+					undoList.add(index, replacements[i]);
 					// notify listeners after the lock on the history is
 					// released
 				}
@@ -1069,8 +1164,8 @@ public final class DefaultOperationHistory implements IOperationHistory {
 		if (inUndo) {
 			// notify listeners of operations added and removed
 			internalRemove(operation);
-			for (IUndoableOperation replacement : replacements) {
-				notifyAdd(replacement);
+			for (int i = 0; i < replacements.length; i++) {
+				notifyAdd(replacements[i]);
 			}
 			return;
 		}
@@ -1085,12 +1180,12 @@ public final class DefaultOperationHistory implements IOperationHistory {
 			ArrayList<IUndoContext> allContexts = new ArrayList<>(replacements.length);
 			redoList.remove(operation);
 			// notify listeners after we release the lock on redoList
-			for (IUndoableOperation replacement : replacements) {
-				IUndoContext[] opContexts = replacement.getContexts();
-				for (IUndoContext opContext : opContexts) {
-					allContexts.add(opContext);
+			for (int i = 0; i < replacements.length; i++) {
+				IUndoContext[] opContexts = replacements[i].getContexts();
+				for (int j = 0; j < opContexts.length; j++) {
+					allContexts.add(opContexts[j]);
 				}
-				redoList.add(index, replacement);
+				redoList.add(index, replacements[i]);
 				// notify listeners after we release the lock on redoList
 			}
 			// recheck all the limits. We do this at the end so the index
@@ -1102,11 +1197,17 @@ public final class DefaultOperationHistory implements IOperationHistory {
 		}
 		// send listener notifications after we release the lock on the history
 		internalRemove(operation);
-		for (IUndoableOperation replacement : replacements) {
-			notifyAdd(replacement);
+		for (int i = 0; i < replacements.length; i++) {
+			notifyAdd(replacements[i]);
 		}
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.core.commands.operations.IOperationHistory#setLimit(org.eclipse.core.commands.operations.IUndoContext,
+	 *      int)
+	 */
 	@Override
 	public void setLimit(IUndoContext context, int limit) {
 		Assert.isTrue(limit >= 0);
@@ -1118,7 +1219,7 @@ public final class DefaultOperationHistory implements IOperationHistory {
 		 * override this if a global limit is desired.
 		 */
 		Assert.isNotNull(context);
-		limits.put(context, Integer.valueOf(limit));
+		limits.put(context, new Integer(limit));
 		synchronized (undoRedoHistoryLock) {
 			forceUndoLimit(context, limit);
 			forceRedoLimit(context, limit);
@@ -1126,6 +1227,13 @@ public final class DefaultOperationHistory implements IOperationHistory {
 
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.core.commands.operations.IOperationHistory#undo(org.eclipse.core.commands.operations.IUndoContext,
+	 *      org.eclipse.core.runtime.IProgressMonitor,
+	 *      org.eclipse.core.runtime.IAdaptable)
+	 */
 	@Override
 	public IStatus undo(IUndoContext context, IProgressMonitor monitor, IAdaptable info) throws ExecutionException {
 		Assert.isNotNull(context);
@@ -1147,6 +1255,13 @@ public final class DefaultOperationHistory implements IOperationHistory {
 		return doUndo(monitor, info, operation);
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.core.commands.operations.IOperationHistory#undoOperation(org.eclipse.core.commands.operations.IUndoableOperation,
+	 *      org.eclipse.core.runtime.IProgressMonitor,
+	 *      org.eclipse.core.runtime.IAdaptable)
+	 */
 	@Override
 	public IStatus undoOperation(IUndoableOperation operation, IProgressMonitor monitor, IAdaptable info)
 			throws ExecutionException {
@@ -1163,6 +1278,11 @@ public final class DefaultOperationHistory implements IOperationHistory {
 		return status;
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.core.commands.operations.IOperationHistory#openOperation(org.eclipse.core.commands.operations.ICompositeOperation)
+	 */
 	@Override
 	public void openOperation(ICompositeOperation operation, int mode) {
 		synchronized (openCompositeLock) {
@@ -1188,6 +1308,12 @@ public final class DefaultOperationHistory implements IOperationHistory {
 		}
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.core.commands.operations.IOperationHistory#closeOperation(boolean,
+	 *      boolean)
+	 */
 	@Override
 	public void closeOperation(boolean operationOK, boolean addToHistory, int mode) {
 		ICompositeOperation endedComposite = null;
@@ -1227,6 +1353,11 @@ public final class DefaultOperationHistory implements IOperationHistory {
 		}
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.core.commands.operations.IOperationHistory#operationChanged(org.eclipse.core.commands.operations.IUndoableOperation)
+	 */
 	@Override
 	public void operationChanged(IUndoableOperation operation) {
 		if (undoList.contains(operation) || redoList.contains(operation)) {
