@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2008, 2017 Matthew Hall and others.
+ * Copyright (c) 2008, 2010 Matthew Hall and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -8,7 +8,6 @@
  * Contributors:
  *     Matthew Hall - initial API and implementation (bug 194734)
  *     Matthew Hall - bugs 262269, 265561, 262287, 268688, 278550
- *     Stefan Xenos <sxenos@gmail.com> - Bug 335792
  ******************************************************************************/
 
 package org.eclipse.core.internal.databinding.property.value;
@@ -25,6 +24,7 @@ import java.util.Set;
 import org.eclipse.core.databinding.observable.Diffs;
 import org.eclipse.core.databinding.observable.IStaleListener;
 import org.eclipse.core.databinding.observable.ObservableTracker;
+import org.eclipse.core.databinding.observable.StaleEvent;
 import org.eclipse.core.databinding.observable.list.AbstractObservableList;
 import org.eclipse.core.databinding.observable.list.IListChangeListener;
 import org.eclipse.core.databinding.observable.list.IObservableList;
@@ -32,8 +32,10 @@ import org.eclipse.core.databinding.observable.list.ListChangeEvent;
 import org.eclipse.core.databinding.observable.list.ListDiff;
 import org.eclipse.core.databinding.observable.list.ListDiffEntry;
 import org.eclipse.core.databinding.observable.set.IObservableSet;
-import org.eclipse.core.databinding.observable.value.ValueDiff;
+import org.eclipse.core.databinding.observable.set.ISetChangeListener;
+import org.eclipse.core.databinding.observable.set.SetChangeEvent;
 import org.eclipse.core.databinding.property.INativePropertyListener;
+import org.eclipse.core.databinding.property.IProperty;
 import org.eclipse.core.databinding.property.IPropertyObservable;
 import org.eclipse.core.databinding.property.ISimplePropertyListener;
 import org.eclipse.core.databinding.property.SimplePropertyEvent;
@@ -44,29 +46,22 @@ import org.eclipse.core.internal.databinding.identity.IdentitySet;
 import org.eclipse.core.internal.databinding.property.Util;
 
 /**
- * @param <S>
- *            type of the source object
- * @param <M>
- *            type of the elements in the master list
- * @param <T>
- *            type of the elements in the list, being the type of the value of
- *            the detail property
  * @since 1.2
  */
-public class ListSimpleValueObservableList<S, M extends S, T> extends AbstractObservableList<T>
-		implements IPropertyObservable<SimpleValueProperty<S, T>> {
-	private IObservableList<M> masterList;
-	private SimpleValueProperty<S, T> detailProperty;
+public class ListSimpleValueObservableList extends AbstractObservableList
+		implements IPropertyObservable {
+	private IObservableList masterList;
+	private SimpleValueProperty detailProperty;
 
-	private IObservableSet<M> knownMasterElements;
-	private Map<M, T> cachedValues;
-	private Set<M> staleElements;
+	private IObservableSet knownMasterElements;
+	private Map cachedValues;
+	private Set staleElements;
 
 	private boolean updating;
 
-	private IListChangeListener<M> masterListener = new IListChangeListener<M>() {
+	private IListChangeListener masterListener = new IListChangeListener() {
 		@Override
-		public void handleListChange(ListChangeEvent<? extends M> event) {
+		public void handleListChange(ListChangeEvent event) {
 			if (!isDisposed()) {
 				updateKnownElements();
 				fireListChange(convertDiff(event.diff));
@@ -74,53 +69,66 @@ public class ListSimpleValueObservableList<S, M extends S, T> extends AbstractOb
 		}
 
 		private void updateKnownElements() {
-			Set<M> identityKnownElements = new IdentitySet<>(masterList);
+			Set identityKnownElements = new IdentitySet(masterList);
 			knownMasterElements.retainAll(identityKnownElements);
 			knownMasterElements.addAll(identityKnownElements);
 		}
 
-		private ListDiff<T> convertDiff(ListDiff<? extends M> diff) {
+		private ListDiff convertDiff(ListDiff diff) {
 			// Convert diff to detail value
-			ListDiffEntry<? extends M>[] masterEntries = diff.getDifferences();
-			List<ListDiffEntry<T>> detailEntries = new ArrayList<>(masterEntries.length);
-			for (ListDiffEntry<? extends M> masterDifference : masterEntries) {
+			ListDiffEntry[] masterEntries = diff.getDifferences();
+			ListDiffEntry[] detailEntries = new ListDiffEntry[masterEntries.length];
+			for (int i = 0; i < masterEntries.length; i++) {
+				ListDiffEntry masterDifference = masterEntries[i];
 				int index = masterDifference.getPosition();
 				boolean addition = masterDifference.isAddition();
-				M masterElement = masterDifference.getElement();
-				T elementDetailValue = detailProperty.getValue(masterElement);
-				detailEntries.add(Diffs.createListDiffEntry(index, addition, elementDetailValue));
+				Object masterElement = masterDifference.getElement();
+				Object elementDetailValue = detailProperty
+						.getValue(masterElement);
+				detailEntries[i] = Diffs.createListDiffEntry(index, addition,
+						elementDetailValue);
 			}
 			return Diffs.createListDiff(detailEntries);
 		}
 	};
 
-	private IStaleListener staleListener = staleEvent -> fireStale();
+	private IStaleListener staleListener = new IStaleListener() {
+		@Override
+		public void handleStale(StaleEvent staleEvent) {
+			fireStale();
+		}
+	};
 
-	private INativePropertyListener<S> detailListener;
+	private INativePropertyListener detailListener;
 
 	/**
 	 * @param masterList
 	 * @param valueProperty
 	 */
-	public ListSimpleValueObservableList(IObservableList<M> masterList, SimpleValueProperty<S, T> valueProperty) {
+	public ListSimpleValueObservableList(IObservableList masterList,
+			SimpleValueProperty valueProperty) {
 		super(masterList.getRealm());
 		this.masterList = masterList;
 		this.detailProperty = valueProperty;
 
-		ISimplePropertyListener<S, ValueDiff<? extends T>> listener = event -> {
-			if (!isDisposed() && !updating) {
-				getRealm().exec(() -> {
-					@SuppressWarnings("unchecked")
-					M source = (M) event.getSource();
-					if (event.type == SimplePropertyEvent.CHANGE) {
-						notifyIfChanged(source);
-					} else if (event.type == SimplePropertyEvent.STALE) {
-						boolean wasStale = !staleElements.isEmpty();
-						staleElements.add(source);
-						if (!wasStale)
-							fireStale();
-					}
-				});
+		ISimplePropertyListener listener = new ISimplePropertyListener() {
+			@Override
+			public void handleEvent(final SimplePropertyEvent event) {
+				if (!isDisposed() && !updating) {
+					getRealm().exec(new Runnable() {
+						@Override
+						public void run() {
+							if (event.type == SimplePropertyEvent.CHANGE) {
+								notifyIfChanged(event.getSource());
+							} else if (event.type == SimplePropertyEvent.STALE) {
+								boolean wasStale = !staleElements.isEmpty();
+								staleElements.add(event.getSource());
+								if (!wasStale)
+									fireStale();
+							}
+						}
+					});
+				}
 			}
 		};
 		this.detailListener = detailProperty.adaptListener(listener);
@@ -130,31 +138,41 @@ public class ListSimpleValueObservableList<S, M extends S, T> extends AbstractOb
 	protected void firstListenerAdded() {
 		ObservableTracker.setIgnore(true);
 		try {
-			knownMasterElements = new IdentityObservableSet<M>(getRealm(), null);
+			knownMasterElements = new IdentityObservableSet(getRealm(), null);
 		} finally {
 			ObservableTracker.setIgnore(false);
 		}
 
-		cachedValues = new IdentityMap<>();
-		staleElements = new IdentitySet<>();
-		knownMasterElements.addSetChangeListener(event -> {
-			for (M key1 : event.diff.getRemovals()) {
-				if (detailListener != null)
-					detailListener.removeFrom(key1);
-				cachedValues.remove(key1);
-				staleElements.remove(key1);
-			}
-			for (M key2 : event.diff.getAdditions()) {
-				cachedValues.put(key2, detailProperty.getValue(key2));
-				if (detailListener != null)
-					detailListener.addTo(key2);
+		cachedValues = new IdentityMap();
+		staleElements = new IdentitySet();
+		knownMasterElements.addSetChangeListener(new ISetChangeListener() {
+			@Override
+			public void handleSetChange(SetChangeEvent event) {
+				for (Iterator it = event.diff.getRemovals().iterator(); it
+						.hasNext();) {
+					Object key = it.next();
+					if (detailListener != null)
+						detailListener.removeFrom(key);
+					cachedValues.remove(key);
+					staleElements.remove(key);
+				}
+				for (Iterator it = event.diff.getAdditions().iterator(); it
+						.hasNext();) {
+					Object key = it.next();
+					cachedValues.put(key, detailProperty.getValue(key));
+					if (detailListener != null)
+						detailListener.addTo(key);
+				}
 			}
 		});
-		getRealm().exec(() -> {
-			knownMasterElements.addAll(masterList);
+		getRealm().exec(new Runnable() {
+			@Override
+			public void run() {
+				knownMasterElements.addAll(masterList);
 
-			masterList.addListChangeListener(masterListener);
-			masterList.addStaleListener(staleListener);
+				masterList.addListChangeListener(masterListener);
+				masterList.addStaleListener(staleListener);
+			}
 		});
 	}
 
@@ -194,9 +212,9 @@ public class ListSimpleValueObservableList<S, M extends S, T> extends AbstractOb
 	}
 
 	@Override
-	public T get(int index) {
+	public Object get(int index) {
 		getterCalled();
-		M masterElement = masterList.get(index);
+		Object masterElement = masterList.get(index);
 		return detailProperty.getValue(masterElement);
 	}
 
@@ -206,12 +224,12 @@ public class ListSimpleValueObservableList<S, M extends S, T> extends AbstractOb
 	}
 
 	@Override
-	public boolean addAll(Collection<? extends T> c) {
+	public boolean addAll(Collection c) {
 		throw new UnsupportedOperationException();
 	}
 
 	@Override
-	public boolean addAll(int index, Collection<? extends T> c) {
+	public boolean addAll(int index, Collection c) {
 		throw new UnsupportedOperationException();
 	}
 
@@ -219,8 +237,8 @@ public class ListSimpleValueObservableList<S, M extends S, T> extends AbstractOb
 	public boolean contains(Object o) {
 		getterCalled();
 
-		for (M m : masterList) {
-			if (Util.equals(detailProperty.getValue(m), o))
+		for (Iterator it = masterList.iterator(); it.hasNext();) {
+			if (Util.equals(detailProperty.getValue(it.next()), o))
 				return true;
 		}
 		return false;
@@ -235,14 +253,15 @@ public class ListSimpleValueObservableList<S, M extends S, T> extends AbstractOb
 	@Override
 	public boolean isStale() {
 		getterCalled();
-		return masterList.isStale() || staleElements != null && !staleElements.isEmpty();
+		return masterList.isStale() || staleElements != null
+				&& !staleElements.isEmpty();
 	}
 
 	@Override
-	public Iterator<T> iterator() {
+	public Iterator iterator() {
 		getterCalled();
-		return new Iterator<T>() {
-			Iterator<M> it = masterList.iterator();
+		return new Iterator() {
+			Iterator it = masterList.iterator();
 
 			@Override
 			public boolean hasNext() {
@@ -251,9 +270,9 @@ public class ListSimpleValueObservableList<S, M extends S, T> extends AbstractOb
 			}
 
 			@Override
-			public T next() {
+			public Object next() {
 				getterCalled();
-				M masterElement = it.next();
+				Object masterElement = it.next();
 				return detailProperty.getValue(masterElement);
 			}
 
@@ -265,7 +284,7 @@ public class ListSimpleValueObservableList<S, M extends S, T> extends AbstractOb
 	}
 
 	@Override
-	public T move(int oldIndex, int newIndex) {
+	public Object move(int oldIndex, int newIndex) {
 		throw new UnsupportedOperationException();
 	}
 
@@ -275,37 +294,35 @@ public class ListSimpleValueObservableList<S, M extends S, T> extends AbstractOb
 	}
 
 	@Override
-	public boolean removeAll(Collection<?> c) {
+	public boolean removeAll(Collection c) {
 		throw new UnsupportedOperationException();
 	}
 
 	@Override
-	public boolean retainAll(Collection<?> c) {
+	public boolean retainAll(Collection c) {
 		throw new UnsupportedOperationException();
 	}
 
 	@Override
-	@SuppressWarnings("unchecked")
 	public Object[] toArray() {
 		getterCalled();
 		Object[] masterElements = masterList.toArray();
 		Object[] result = new Object[masterElements.length];
 		for (int i = 0; i < result.length; i++) {
-			// cast is always safe as we get the array from a list of type M
-			result[i] = detailProperty.getValue((M) masterElements[i]);
+			result[i] = detailProperty.getValue(masterElements[i]);
 		}
 		return result;
 	}
 
 	@Override
-	@SuppressWarnings("unchecked")
-	public <V> V[] toArray(V[] a) {
+	public Object[] toArray(Object[] a) {
 		getterCalled();
 		Object[] masterElements = masterList.toArray();
 		if (a.length < masterElements.length)
-			a = (V[]) Array.newInstance(a.getClass().getComponentType(), masterElements.length);
+			a = (Object[]) Array.newInstance(a.getClass().getComponentType(),
+					masterElements.length);
 		for (int i = 0; i < masterElements.length; i++) {
-			a[i] = (V) detailProperty.getValue((M) masterElements[i]);
+			a[i] = detailProperty.getValue(masterElements[i]);
 		}
 		return a;
 	}
@@ -321,17 +338,17 @@ public class ListSimpleValueObservableList<S, M extends S, T> extends AbstractOb
 	}
 
 	@Override
-	public ListIterator<T> listIterator() {
+	public ListIterator listIterator() {
 		return listIterator(0);
 	}
 
 	@Override
-	public ListIterator<T> listIterator(final int index) {
+	public ListIterator listIterator(final int index) {
 		getterCalled();
-		return new ListIterator<T>() {
-			ListIterator<M> it = masterList.listIterator(index);
-			M lastMasterElement;
-			T lastElement;
+		return new ListIterator() {
+			ListIterator it = masterList.listIterator(index);
+			Object lastMasterElement;
+			Object lastElement;
 			boolean haveIterated = false;
 
 			@Override
@@ -352,7 +369,7 @@ public class ListSimpleValueObservableList<S, M extends S, T> extends AbstractOb
 			}
 
 			@Override
-			public T next() {
+			public Object next() {
 				getterCalled();
 				lastMasterElement = it.next();
 				lastElement = detailProperty.getValue(lastMasterElement);
@@ -367,7 +384,7 @@ public class ListSimpleValueObservableList<S, M extends S, T> extends AbstractOb
 			}
 
 			@Override
-			public T previous() {
+			public Object previous() {
 				getterCalled();
 				lastMasterElement = it.previous();
 				lastElement = detailProperty.getValue(lastMasterElement);
@@ -387,7 +404,7 @@ public class ListSimpleValueObservableList<S, M extends S, T> extends AbstractOb
 			}
 
 			@Override
-			public void set(T o) {
+			public void set(Object o) {
 				checkRealm();
 				if (!haveIterated)
 					throw new IllegalStateException();
@@ -395,8 +412,7 @@ public class ListSimpleValueObservableList<S, M extends S, T> extends AbstractOb
 				boolean wasUpdating = updating;
 				updating = true;
 				try {
-					// detailProperty.setValue(lastElement, o); // jpp: bug!
-					detailProperty.setValue(lastMasterElement, o);
+					detailProperty.setValue(lastElement, o);
 				} finally {
 					updating = wasUpdating;
 				}
@@ -408,11 +424,12 @@ public class ListSimpleValueObservableList<S, M extends S, T> extends AbstractOb
 		};
 	}
 
-	private void notifyIfChanged(M masterElement) {
+	private void notifyIfChanged(Object masterElement) {
 		if (cachedValues != null) {
-			T oldValue = cachedValues.get(masterElement);
-			T newValue = detailProperty.getValue(masterElement);
-			if (!Util.equals(oldValue, newValue) || staleElements.contains(masterElement)) {
+			Object oldValue = cachedValues.get(masterElement);
+			Object newValue = detailProperty.getValue(masterElement);
+			if (!Util.equals(oldValue, newValue)
+					|| staleElements.contains(masterElement)) {
 				cachedValues.put(masterElement, newValue);
 				staleElements.remove(masterElement);
 				fireListChange(indicesOf(masterElement), oldValue, newValue);
@@ -421,39 +438,43 @@ public class ListSimpleValueObservableList<S, M extends S, T> extends AbstractOb
 	}
 
 	private int[] indicesOf(Object masterElement) {
-		List<Integer> indices = new ArrayList<>();
+		List indices = new ArrayList();
 
-		for (ListIterator<M> it = ListSimpleValueObservableList.this.masterList.listIterator(); it.hasNext();) {
+		for (ListIterator it = ListSimpleValueObservableList.this.masterList
+				.listIterator(); it.hasNext();) {
 			if (masterElement == it.next())
-				indices.add(Integer.valueOf(it.previousIndex()));
+				indices.add(new Integer(it.previousIndex()));
 		}
 
 		int[] result = new int[indices.size()];
 		for (int i = 0; i < result.length; i++) {
-			result[i] = indices.get(i).intValue();
+			result[i] = ((Integer) indices.get(i)).intValue();
 		}
 		return result;
 	}
 
-	private void fireListChange(int[] indices, T oldValue, T newValue) {
-		List<ListDiffEntry<T>> differences = new ArrayList<>(indices.length * 2);
-		for (int index : indices) {
-			differences.add(Diffs.createListDiffEntry(index, false, oldValue));
-			differences.add(Diffs.createListDiffEntry(index, true, newValue));
+	private void fireListChange(int[] indices, Object oldValue, Object newValue) {
+		ListDiffEntry[] differences = new ListDiffEntry[indices.length * 2];
+		for (int i = 0; i < indices.length; i++) {
+			int index = indices[i];
+			differences[i * 2] = Diffs.createListDiffEntry(index, false,
+					oldValue);
+			differences[i * 2 + 1] = Diffs.createListDiffEntry(index, true,
+					newValue);
 		}
 		fireListChange(Diffs.createListDiff(differences));
 	}
 
 	@Override
-	public T remove(int index) {
+	public Object remove(int index) {
 		throw new UnsupportedOperationException();
 	}
 
 	@Override
-	public T set(int index, T o) {
+	public Object set(int index, Object o) {
 		checkRealm();
-		M masterElement = masterList.get(index);
-		T oldValue = detailProperty.getValue(masterElement);
+		Object masterElement = masterList.get(index);
+		Object oldValue = detailProperty.getValue(masterElement);
 
 		boolean wasUpdating = updating;
 		updating = true;
@@ -474,7 +495,7 @@ public class ListSimpleValueObservableList<S, M extends S, T> extends AbstractOb
 	}
 
 	@Override
-	public SimpleValueProperty<S, T> getProperty() {
+	public IProperty getProperty() {
 		return detailProperty;
 	}
 
