@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2008, 2017 Matthew Hall and others.
+ * Copyright (c) 2008, 2011 Matthew Hall and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -32,6 +32,7 @@ import org.eclipse.core.databinding.observable.Realm;
 import org.eclipse.core.databinding.observable.StaleEvent;
 import org.eclipse.core.databinding.observable.list.IListChangeListener;
 import org.eclipse.core.databinding.observable.list.IObservableList;
+import org.eclipse.core.databinding.observable.list.ListChangeEvent;
 import org.eclipse.core.databinding.observable.list.ListDiffVisitor;
 import org.eclipse.core.databinding.observable.list.WritableList;
 import org.eclipse.core.databinding.observable.map.IObservableMap;
@@ -89,8 +90,8 @@ import org.eclipse.core.runtime.IStatus;
  * dbc.addValidationStatusProvider(validator);
  *
  * // Bind the middle observables to the model observables.
- * IObservableValue model0 = new WritableValue(Integer.valueOf(2), Integer.TYPE);
- * IObservableValue model1 = new WritableValue(Integer.valueOf(4), Integer.TYPE);
+ * IObservableValue model0 = new WritableValue(new Integer(2), Integer.TYPE);
+ * IObservableValue model1 = new WritableValue(new Integer(4), Integer.TYPE);
  * dbc.bind(middle0, model0, null, null);
  * dbc.bind(middle1, model1, null, null);
  * </pre>
@@ -107,8 +108,8 @@ import org.eclipse.core.runtime.IStatus;
  * // Validated observables do not change value until the validator passes.
  * IObservableValue validated0 = validator.observeValidatedValue(middle0);
  * IObservableValue validated1 = validator.observeValidatedValue(middle1);
- * IObservableValue model0 = new WritableValue(Integer.valueOf(2), Integer.TYPE);
- * IObservableValue model1 = new WritableValue(Integer.valueOf(4), Integer.TYPE);
+ * IObservableValue model0 = new WritableValue(new Integer(2), Integer.TYPE);
+ * IObservableValue model1 = new WritableValue(new Integer(4), Integer.TYPE);
  * // Bind to the validated value, not the middle/target
  * dbc.bind(validated0, model0, null, null);
  * dbc.bind(validated1, model1, null, null);
@@ -129,21 +130,26 @@ public abstract class MultiValidator extends ValidationStatusProvider {
 	private IObservableList unmodifiableTargets;
 	private IObservableList models;
 
-	IListChangeListener targetsListener = event -> event.diff.accept(new ListDiffVisitor() {
+	IListChangeListener targetsListener = new IListChangeListener() {
 		@Override
-		public void handleAdd(int index, Object element) {
-			IObservable dependency = (IObservable) element;
-			dependency.addChangeListener(dependencyListener);
-			dependency.addStaleListener(dependencyListener);
-		}
+		public void handleListChange(ListChangeEvent event) {
+			event.diff.accept(new ListDiffVisitor() {
+				@Override
+				public void handleAdd(int index, Object element) {
+					IObservable dependency = (IObservable) element;
+					dependency.addChangeListener(dependencyListener);
+					dependency.addStaleListener(dependencyListener);
+				}
 
-		@Override
-		public void handleRemove(int index, Object element) {
-			IObservable dependency = (IObservable) element;
-			dependency.removeChangeListener(dependencyListener);
-			dependency.removeStaleListener(dependencyListener);
+				@Override
+				public void handleRemove(int index, Object element) {
+					IObservable dependency = (IObservable) element;
+					dependency.removeChangeListener(dependencyListener);
+					dependency.removeStaleListener(dependencyListener);
+				}
+			});
 		}
-	});
+	};
 
 	private class DependencyListener implements IChangeListener, IStaleListener {
 		@Override
