@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2016 IBM Corporation and others.
+ * Copyright (c) 2000, 2013 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -23,13 +23,14 @@ import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.Reader;
 import java.io.Writer;
-import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
+import java.util.Enumeration;
 import java.util.HashMap;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
 
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
@@ -106,9 +107,9 @@ public class DialogSettings implements IDialogSettings {
      */
     public DialogSettings(String sectionName) {
         name = sectionName;
-        items = new HashMap<>();
-        arrayItems = new HashMap<>();
-        sections = new HashMap<>();
+        items = new HashMap<String, String>();
+        arrayItems = new HashMap<String, String[]>();
+        sections = new HashMap<String, IDialogSettings>();
     }
 
     @Override
@@ -191,13 +192,13 @@ public class DialogSettings implements IDialogSettings {
 	public int getInt(String key) throws NumberFormatException {
         String setting = items.get(key);
         if (setting == null) {
-			// Integer.valueOf(null) will throw a NumberFormatException and
-			// meet our spec, but this message is clearer.
+            //new Integer(null) will throw a NumberFormatException and meet our spec, but this message
+            //is clearer.
             throw new NumberFormatException(
                     "There is no setting associated with the key \"" + key + "\"");//$NON-NLS-1$ //$NON-NLS-2$
         }
 
-		return Integer.valueOf(setting).intValue();
+        return new Integer(setting).intValue();
     }
 
     @Override
@@ -281,7 +282,7 @@ public class DialogSettings implements IDialogSettings {
 	public void load(String fileName) throws IOException {
         FileInputStream stream = new FileInputStream(fileName);
         BufferedReader reader = new BufferedReader(new InputStreamReader(
-				stream, StandardCharsets.UTF_8));
+                stream, "utf-8"));//$NON-NLS-1$
         load(reader);
         reader.close();
     }
@@ -304,7 +305,7 @@ public class DialogSettings implements IDialogSettings {
                 Element child = (Element) l.item(i);
                 String key = child.getAttribute(TAG_KEY);
                 NodeList list = child.getElementsByTagName(TAG_ITEM);
-                List<String> valueList = new ArrayList<>();
+                List<String> valueList = new ArrayList<String>();
                 for (int j = 0; j < list.getLength(); j++) {
                     Element node = (Element) list.item(j);
                     if (child == node.getParentNode()) {
@@ -364,41 +365,43 @@ public class DialogSettings implements IDialogSettings {
 
 	@Override
 	public void save(Writer writer) throws IOException {
-		final XMLWriter xmlWriter = new XMLWriter(writer);
+    	final XMLWriter xmlWriter = new XMLWriter(writer);
     	save(xmlWriter);
     	xmlWriter.flush();
     }
 
     @Override
 	public void save(String fileName) throws IOException {
-		try (XMLWriter writer = new XMLWriter(new FileOutputStream(fileName))) {
-			save(writer);
-		}
+        FileOutputStream stream = new FileOutputStream(fileName);
+        XMLWriter writer = new XMLWriter(stream);
+        save(writer);
+        writer.close();
     }
 
     private void save(XMLWriter out) throws IOException {
-    	HashMap<String, String> attributes = new HashMap<>(2);
+    	HashMap<String, String> attributes = new HashMap<String, String>(2);
     	attributes.put(TAG_NAME, name == null ? "" : name); //$NON-NLS-1$
         out.startTag(TAG_SECTION, attributes);
         attributes.clear();
 
-		for (Entry<String, String> entry : items.entrySet()) {
-			String key = entry.getKey();
+        for (Iterator<String> i = items.keySet().iterator(); i.hasNext();) {
+            String key = i.next();
             attributes.put(TAG_KEY, key == null ? "" : key); //$NON-NLS-1$
-			String string = entry.getValue();
+            String string = items.get(key);
             attributes.put(TAG_VALUE, string == null ? "" : string); //$NON-NLS-1$
             out.printTag(TAG_ITEM, attributes, true);
         }
 
         attributes.clear();
-		for (Entry<String, String[]> entry : arrayItems.entrySet()) {
-			String key = entry.getKey();
+        for (Iterator<String> i = arrayItems.keySet().iterator(); i.hasNext();) {
+            String key = i.next();
             attributes.put(TAG_KEY, key == null ? "" : key); //$NON-NLS-1$
             out.startTag(TAG_LIST, attributes);
-			String[] value = entry.getValue();
+            String[] value = arrayItems.get(key);
             attributes.clear();
             if (value != null) {
-                for (String string : value) {
+                for (int index = 0; index < value.length; index++) {
+                    String string = value[index];
                     attributes.put(TAG_VALUE, string == null ? "" : string); //$NON-NLS-1$
                     out.printTag(TAG_ITEM, attributes, true);
                 }
@@ -406,8 +409,8 @@ public class DialogSettings implements IDialogSettings {
             out.endTag(TAG_LIST);
             attributes.clear();
         }
-        for (IDialogSettings iDialogSettings : sections.values()) {
-            ((DialogSettings) iDialogSettings).save(out);
+        for (Iterator<IDialogSettings> i = sections.values().iterator(); i.hasNext();) {
+            ((DialogSettings) i.next()).save(out);
         }
         out.endTag(TAG_SECTION);
     }
@@ -430,7 +433,7 @@ public class DialogSettings implements IDialogSettings {
     	 * @throws IOException
     	 */
     	public XMLWriter(OutputStream output) throws IOException {
-			this(new OutputStreamWriter(output, StandardCharsets.UTF_8));
+    		this(new OutputStreamWriter(output, "UTF8")); //$NON-NLS-1$
     	}
 
     	/**
@@ -477,16 +480,16 @@ public class DialogSettings implements IDialogSettings {
     	}
 
     	private void printTag(String name, HashMap<String, String> parameters, boolean shouldTab, boolean newLine, boolean close) throws IOException {
-    		StringBuilder sb = new StringBuilder();
+    		StringBuffer sb = new StringBuffer();
     		sb.append('<');
     		sb.append(name);
     		if (parameters != null) {
-				for (Entry<String, String> entry : parameters.entrySet()) {
+				for (Enumeration<String> e = Collections.enumeration(parameters.keySet()); e.hasMoreElements();) {
     				sb.append(" "); //$NON-NLS-1$
-					String key = entry.getKey();
+    				String key = e.nextElement();
     				sb.append(key);
     				sb.append("=\""); //$NON-NLS-1$
-					sb.append(getEscaped(String.valueOf(entry.getValue())));
+    				sb.append(getEscaped(String.valueOf(parameters.get(key))));
     				sb.append("\""); //$NON-NLS-1$
     			}
 			}
@@ -519,7 +522,7 @@ public class DialogSettings implements IDialogSettings {
     		printTag(name, parameters, true, newLine, false);
     	}
 
-    	private static void appendEscapedChar(StringBuilder buffer, char c) {
+    	private static void appendEscapedChar(StringBuffer buffer, char c) {
     		String replacement = getReplacement(c);
     		if (replacement != null) {
     			buffer.append('&');
@@ -531,7 +534,7 @@ public class DialogSettings implements IDialogSettings {
     	}
 
     	private static String getEscaped(String s) {
-    		StringBuilder result = new StringBuilder(s.length() + 10);
+    		StringBuffer result = new StringBuffer(s.length() + 10);
     		for (int i = 0; i < s.length(); ++i) {
 				appendEscapedChar(result, s.charAt(i));
 			}
