@@ -1,5 +1,5 @@
 /*******************************************************************************
- *  Copyright (c) 2000, 2015 IBM Corporation and others.
+ *  Copyright (c) 2000, 2011 IBM Corporation and others.
  *  All rights reserved. This program and the accompanying materials
  *  are made available under the terms of the Eclipse Public License v1.0
  *  which accompanies this distribution, and is available at
@@ -15,12 +15,8 @@ import java.util.Hashtable;
 import java.util.Vector;
 
 import org.eclipse.swt.SWT;
-import org.eclipse.swt.graphics.Point;
-import org.eclipse.swt.graphics.Rectangle;
-import org.eclipse.swt.widgets.Composite;
-import org.eclipse.swt.widgets.Control;
-import org.eclipse.swt.widgets.Layout;
-import org.eclipse.ui.internal.forms.widgets.FormUtil;
+import org.eclipse.swt.graphics.*;
+import org.eclipse.swt.widgets.*;
 
 /**
  * This implementation of the layout algorithm attempts to position controls in
@@ -93,9 +89,9 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 
 	private boolean initialLayout = true;
 
-	private Vector<TableWrapData[]> grid;
+	private Vector grid = null;
 
-	private Hashtable<Control, RowSpan> rowspans;
+	private Hashtable rowspans;
 
 	private int[] minColumnWidths, maxColumnWidths;
 
@@ -147,7 +143,6 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 	 *
 	 * @see ILayoutExtension
 	 */
-	@Override
 	public int computeMinimumWidth(Composite parent, boolean changed) {
 
 		Control[] children = parent.getChildren();
@@ -165,7 +160,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 		}
 		if (grid == null || changed) {
 			changed = true;
-			grid = new Vector<>();
+			grid = new Vector();
 			createGrid(parent);
 		}
 		if (minColumnWidths == null)
@@ -181,7 +176,6 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 	 *
 	 * @see ILayoutExtension
 	 */
-	@Override
 	public int computeMaximumWidth(Composite parent, boolean changed) {
 		Control[] children = parent.getChildren();
 		if (changed) {
@@ -198,7 +192,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 		}
 		if (grid == null || changed) {
 			changed = true;
-			grid = new Vector<>();
+			grid = new Vector();
 			createGrid(parent);
 		}
 		if (maxColumnWidths == null)
@@ -212,7 +206,6 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 	/**
 	 * @see Layout#layout(Composite, boolean)
 	 */
-	@Override
 	protected void layout(Composite parent, boolean changed) {
 
 		Rectangle clientArea = parent.getClientArea();
@@ -235,7 +228,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 		}
 		if (grid == null || changed) {
 			changed = true;
-			grid = new Vector<>();
+			grid = new Vector();
 			createGrid(parent);
 		}
 		resetColumnWidths();
@@ -285,7 +278,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 		for (int i = 0; i < grid.size(); i++) {
 			int rowHeight = rowHeights[i];
 			int x = leftMargin+clientArea.x;
-			TableWrapData[] row = grid.elementAt(i);
+			TableWrapData[] row = (TableWrapData[]) grid.elementAt(i);
 			for (int j = 0; j < numColumns; j++) {
 				TableWrapData td = row[j];
 				if (td.isItemData) {
@@ -304,7 +297,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 			boolean changed) {
 		int[] rowHeights = new int[grid.size()];
 		for (int i = 0; i < grid.size(); i++) {
-			TableWrapData[] row = grid.elementAt(i);
+			TableWrapData[] row = (TableWrapData[]) grid.elementAt(i);
 			rowHeights[i] = 0;
 			for (int j = 0; j < numColumns; j++) {
 				TableWrapData td = row[j];
@@ -319,15 +312,13 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 					if (k < j + span - 1)
 						cwidth += horizontalSpacing;
 				}
-				Point size = FormUtil.computeControlSize(cache.getCache(td.childIndex), cwidth - td.indent, td.maxWidth,
-						td.maxHeight, isFillAligned(child));
-				size.x += td.indent;
+				Point size = computeSize(td.childIndex, cwidth, td.indent, td.maxWidth, td.maxHeight);
 				td.compWidth = cwidth;
 				if (td.heightHint != SWT.DEFAULT) {
 					size = new Point(size.x, td.heightHint);
 				}
 				td.compSize = size;
-				RowSpan rowspan = rowspans.get(child);
+				RowSpan rowspan = (RowSpan) rowspans.get(child);
 				if (rowspan == null) {
 					rowHeights[i] = Math.max(rowHeights[i], size.y);
 				} else
@@ -335,15 +326,16 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 			}
 			updateRowSpans(i, rowHeights[i]);
 		}
-		for (Enumeration<RowSpan> enm = rowspans.elements(); enm.hasMoreElements();) {
-			RowSpan rowspan = enm.nextElement();
+		for (Enumeration enm = rowspans.elements(); enm.hasMoreElements();) {
+			RowSpan rowspan = (RowSpan) enm.nextElement();
 			int increase = rowspan.getRequiredHeightIncrease();
 			if (increase == 0)
 				continue;
 			TableWrapData td = (TableWrapData) rowspan.child.getLayoutData();
 			int ngrowing = 0;
 			int[] affectedRows = new int[grid.size()];
-			for (int growingRow : growingRows) {
+			for (int i = 0; i < growingRows.length; i++) {
+				int growingRow = growingRows[i];
 				if (growingRow >= rowspan.row
 						&& growingRow < rowspan.row + td.rowspan) {
 					affectedRows[ngrowing++] = growingRow;
@@ -366,8 +358,8 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 	boolean isGrowingColumn(int col) {
 		if (growingColumns == null)
 			return false;
-		for (int growingColumn : growingColumns) {
-			if (col == growingColumn)
+		for (int i = 0; i < growingColumns.length; i++) {
+			if (col == growingColumns[i])
 				return true;
 		}
 		return false;
@@ -395,6 +387,20 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 		return widths;
 	}
 
+	Point computeSize(int childIndex, int width, int indent, int maxWidth, int maxHeight) {
+		int widthArg = width - indent;
+		SizeCache controlCache = cache.getCache(childIndex);
+		if (!isWrap(controlCache.getControl()))
+			widthArg = SWT.DEFAULT;
+		Point size = controlCache.computeSize(widthArg, SWT.DEFAULT);
+		if (maxWidth!=SWT.DEFAULT)
+			size.x = Math.min(size.x, maxWidth);
+		if (maxHeight!=SWT.DEFAULT)
+			size.y = Math.min(size.y, maxHeight);
+		size.x += indent;
+		return size;
+	}
+
 	void placeControl(Control control, TableWrapData td, int x, int y,
 			int[] rowHeights, int row) {
 		int xloc = x + td.indent;
@@ -404,7 +410,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 		int width = td.compSize.x-td.indent;
 		width = Math.min(width, colWidth);
 		int slotHeight = rowHeights[row];
-		RowSpan rowspan = rowspans.get(control);
+		RowSpan rowspan = (RowSpan) rowspans.get(control);
 		if (rowspan != null) {
 			slotHeight = 0;
 			for (int i = row; i < row + td.rowspan; i++) {
@@ -414,16 +420,16 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 			}
 		}
 		// align horizontally
-		if (isFillAligned(control)) {
-			width = colWidth;
-		} else if (td.align == TableWrapData.CENTER) {
-			xloc = x + (colWidth - width) / 2;
+		if (td.align == TableWrapData.CENTER) {
+			xloc = x + colWidth / 2 - width / 2;
 		} else if (td.align == TableWrapData.RIGHT) {
 			xloc = x + colWidth - width;
+		} else if (td.align == TableWrapData.FILL) {
+			width = colWidth;
 		}
 		// align vertically
 		if (td.valign == TableWrapData.MIDDLE) {
-			yloc = y + (slotHeight - height) / 2;
+			yloc = y + slotHeight / 2 - height / 2;
 		} else if (td.valign == TableWrapData.BOTTOM) {
 			yloc = y + slotHeight - height;
 		} else if (td.valign == TableWrapData.FILL) {
@@ -436,9 +442,9 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 		int row, column, rowFill, columnFill;
 		Control[] children;
 		TableWrapData spacerSpec;
-		Vector<Integer> growingCols = new Vector<>();
-		Vector<Integer> growingRows = new Vector<>();
-		rowspans = new Hashtable<>();
+		Vector growingCols = new Vector();
+		Vector growingRows = new Vector();
+		rowspans = new Hashtable();
 		//
 		children = composite.getChildren();
 		if (children.length == 0)
@@ -454,7 +460,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 			// Find the first available spot in the grid.
 			Control child = children[i];
 			TableWrapData spec = (TableWrapData) child.getLayoutData();
-			while (grid.elementAt(row)[column] != null) {
+			while (((TableWrapData[]) grid.elementAt(row))[column] != null) {
 				column = column + 1;
 				if (column >= numColumns) {
 					row = row + 1;
@@ -486,7 +492,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 			// assume the children of a
 			// composite are maintained in the order in which they are created
 			// and added to the composite.
-			grid.elementAt(row)[column] = spec;
+			((TableWrapData[]) grid.elementAt(row))[column] = spec;
 			spec.childIndex = i;
 			if (spec.grabHorizontal) {
 				updateGrowingColumns(growingCols, spec, column);
@@ -503,14 +509,14 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 				for (int c = 0; c < spec.colspan; c++) {
 					spacerSpec = new TableWrapData();
 					spacerSpec.isItemData = false;
-					grid.elementAt(row + r)[column + c] = spacerSpec;
+					((TableWrapData[]) grid.elementAt(row + r))[column + c] = spacerSpec;
 				}
 			}
 			for (int c = 1; c <= columnFill; c++) {
 				for (int r = 0; r < spec.rowspan; r++) {
 					spacerSpec = new TableWrapData();
 					spacerSpec.isItemData = false;
-					grid.elementAt(row + r)[column + c] = spacerSpec;
+					((TableWrapData[]) grid.elementAt(row + r))[column + c] = spacerSpec;
 				}
 			}
 			column = column + spec.colspan - 1;
@@ -519,43 +525,43 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 		for (int k = column + 1; k < numColumns; k++) {
 			spacerSpec = new TableWrapData();
 			spacerSpec.isItemData = false;
-			grid.elementAt(row)[k] = spacerSpec;
+			((TableWrapData[]) grid.elementAt(row))[k] = spacerSpec;
 		}
 		for (int k = row + 1; k < grid.size(); k++) {
 			spacerSpec = new TableWrapData();
 			spacerSpec.isItemData = false;
-			grid.elementAt(k)[column] = spacerSpec;
+			((TableWrapData[]) grid.elementAt(k))[column] = spacerSpec;
 		}
 		growingColumns = new int[growingCols.size()];
 		for (int i = 0; i < growingCols.size(); i++) {
-			growingColumns[i] = growingCols.get(i).intValue();
+			growingColumns[i] = ((Integer) growingCols.get(i)).intValue();
 		}
 		this.growingRows = new int[growingRows.size()];
 		for (int i = 0; i < growingRows.size(); i++) {
-			this.growingRows[i] = growingRows.get(i).intValue();
+			this.growingRows[i] = ((Integer) growingRows.get(i)).intValue();
 		}
 	}
 
-	private void updateGrowingColumns(Vector<Integer> growingColumns,
+	private void updateGrowingColumns(Vector growingColumns,
 			TableWrapData spec, int column) {
 		int affectedColumn = column + spec.colspan - 1;
 		for (int i = 0; i < growingColumns.size(); i++) {
-			Integer col = growingColumns.get(i);
+			Integer col = (Integer) growingColumns.get(i);
 			if (col.intValue() == affectedColumn)
 				return;
 		}
-		growingColumns.add(Integer.valueOf(affectedColumn));
+		growingColumns.add(new Integer(affectedColumn));
 	}
 
-	private void updateGrowingRows(Vector<Integer> growingRows, TableWrapData spec,
+	private void updateGrowingRows(Vector growingRows, TableWrapData spec,
 			int row) {
 		int affectedRow = row + spec.rowspan - 1;
 		for (int i = 0; i < growingRows.size(); i++) {
-			Integer irow = growingRows.get(i);
+			Integer irow = (Integer) growingRows.get(i);
 			if (irow.intValue() == affectedRow)
 				return;
 		}
-		growingRows.add(Integer.valueOf(affectedRow));
+		growingRows.add(new Integer(affectedRow));
 	}
 
 	private TableWrapData[] createEmptyRow() {
@@ -568,7 +574,6 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 	/**
 	 * @see Layout#computeSize(Composite, int, int, boolean)
 	 */
-	@Override
 	protected Point computeSize(Composite parent, int wHint, int hHint,
 			boolean changed) {
 		Control[] children = parent.getChildren();
@@ -589,7 +594,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 		}
 		if (grid == null || changed) {
 			changed = true;
-			grid = new Vector<>();
+			grid = new Vector();
 			createGrid(parent);
 		}
 		resetColumnWidths();
@@ -640,7 +645,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 		int innerHeight = 0;
 		// compute widths
 		for (int i = 0; i < grid.size(); i++) {
-			TableWrapData[] row = grid.elementAt(i);
+			TableWrapData[] row = (TableWrapData[]) grid.elementAt(i);
 			// assign widths, calculate heights
 			int rowHeight = 0;
 			for (int j = 0; j < numColumns; j++) {
@@ -658,12 +663,10 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 				}
 				int cy = td.heightHint;
 				if (cy == SWT.DEFAULT) {
-					SizeCache controlCache = cache.getCache(td.childIndex);
-					Point size = FormUtil.computeControlSize(controlCache, cwidth - td.indent, td.maxWidth,
-							td.maxHeight, isFillAligned(child));
+					Point size = computeSize(td.childIndex, cwidth, td.indent, td.maxWidth, td.maxHeight);
 					cy = size.y;
 				}
-				RowSpan rowspan = rowspans.get(child);
+				RowSpan rowspan = (RowSpan) rowspans.get(child);
 				if (rowspan != null) {
 					// don't take the height of this child into acount
 					// because it spans multiple rows
@@ -686,15 +689,15 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 	private void updateRowSpans(int row, int rowHeight) {
 		if (rowspans == null || rowspans.size() == 0)
 			return;
-		for (Enumeration<RowSpan> enm = rowspans.elements(); enm.hasMoreElements();) {
-			RowSpan rowspan = enm.nextElement();
+		for (Enumeration enm = rowspans.elements(); enm.hasMoreElements();) {
+			RowSpan rowspan = (RowSpan) enm.nextElement();
 			rowspan.update(row, rowHeight);
 		}
 	}
 
 	private int compensateForRowSpans(int totalHeight) {
-		for (Enumeration<RowSpan> enm = rowspans.elements(); enm.hasMoreElements();) {
-			RowSpan rowspan = enm.nextElement();
+		for (Enumeration enm = rowspans.elements(); enm.hasMoreElements();) {
+			RowSpan rowspan = (RowSpan) enm.nextElement();
 			totalHeight += rowspan.getRequiredHeightIncrease();
 		}
 		return totalHeight;
@@ -757,7 +760,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 		boolean secondPassNeeded=false;
 		int widestColumnWidth = 0;
 		for (int i = 0; i < grid.size(); i++) {
-			TableWrapData[] row = grid.elementAt(i);
+			TableWrapData[] row = (TableWrapData[]) grid.elementAt(i);
 			for (int j = 0; j < numColumns; j++) {
 				TableWrapData td = row[j];
 				if (td.isItemData == false)
@@ -791,7 +794,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 
 		// Second pass for controls with multi-column horizontal span
 		for (int i = 0; i < grid.size(); i++) {
-			TableWrapData[] row = grid.elementAt(i);
+			TableWrapData[] row = (TableWrapData[]) grid.elementAt(i);
 			for (int j = 0; j < numColumns; j++) {
 				TableWrapData td = row[j];
 				if (td.isItemData == false || td.colspan==1)
@@ -843,16 +846,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 		}
 	}
 
-	boolean isFillAligned(Control control) {
-		Object layoutData = control.getLayoutData();
-
-		if (layoutData instanceof TableWrapData) {
-			TableWrapData tableWrapData = (TableWrapData) layoutData;
-
-			if (tableWrapData.align == TableWrapData.FILL) {
-				return true;
-			}
-		}
+	boolean isWrap(Control control) {
 		if (control instanceof Composite
 				&& ((Composite) control).getLayout() instanceof ILayoutExtension)
 			return true;
@@ -870,7 +864,8 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 
 	void initializeLayoutData(Composite composite) {
 		Control[] children = composite.getChildren();
-		for (Control child : children) {
+		for (int i = 0; i < children.length; i++) {
+			Control child = children[i];
 			if (child.getLayoutData() == null) {
 				child.setLayoutData(new TableWrapData());
 			}
