@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2015 IBM Corporation and others.
+ * Copyright (c) 2000, 2013 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -16,13 +16,13 @@ import java.util.Iterator;
 import java.util.Map;
 import java.util.Set;
 import org.eclipse.core.commands.common.EventManager;
-import org.eclipse.core.runtime.Adapters;
 import org.eclipse.core.runtime.SafeRunner;
 import org.eclipse.e4.core.contexts.IEclipseContext;
 import org.eclipse.e4.ui.model.application.ui.basic.MPart;
 import org.eclipse.e4.ui.workbench.modeling.ESelectionService;
 import org.eclipse.jface.action.IAction;
 import org.eclipse.jface.util.IPropertyChangeListener;
+import org.eclipse.jface.util.PropertyChangeEvent;
 import org.eclipse.jface.util.SafeRunnable;
 import org.eclipse.jface.viewers.IPostSelectionProvider;
 import org.eclipse.jface.viewers.ISelection;
@@ -45,6 +45,7 @@ import org.eclipse.ui.PartInitException;
 import org.eclipse.ui.SubActionBars;
 import org.eclipse.ui.internal.WorkbenchPage;
 import org.eclipse.ui.internal.WorkbenchPlugin;
+import org.eclipse.ui.internal.util.Util;
 
 /**
  * Abstract superclass of all multi-page workbench views.
@@ -148,23 +149,36 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	/**
 	 * The action bar property listener.
 	 */
-	private IPropertyChangeListener actionBarPropListener = event -> {
-		if (event.getProperty().equals(SubActionBars.P_ACTION_HANDLERS)
-				&& activeRec != null
-				&& event.getSource() == activeRec.subActionBars) {
-			refreshGlobalActionHandlers();
+	private IPropertyChangeListener actionBarPropListener = new IPropertyChangeListener() {
+		@Override
+		public void propertyChange(PropertyChangeEvent event) {
+			if (event.getProperty().equals(SubActionBars.P_ACTION_HANDLERS)
+					&& activeRec != null
+					&& event.getSource() == activeRec.subActionBars) {
+				refreshGlobalActionHandlers();
+			}
 		}
 	};
 
 	/**
 	 * Selection change listener to listen for page selection changes
 	 */
-	private ISelectionChangedListener selectionChangedListener = event -> pageSelectionChanged(event);
+	private ISelectionChangedListener selectionChangedListener = new ISelectionChangedListener() {
+		@Override
+		public void selectionChanged(SelectionChangedEvent event) {
+			pageSelectionChanged(event);
+		}
+	};
 
 	/**
 	 * Selection change listener to listen for page selection changes
 	 */
-	private ISelectionChangedListener postSelectionListener = event -> postSelectionChanged(event);
+	private ISelectionChangedListener postSelectionListener = new ISelectionChangedListener() {
+		@Override
+		public void selectionChanged(SelectionChangedEvent event) {
+			postSelectionChanged(event);
+		}
+	};
 
 	/**
 	 * Selection provider for this view's site
@@ -240,12 +254,13 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 		 */
 		public void selectionChanged(final SelectionChangedEvent event) {
 			// pass on the notification to listeners
-			for (Object listener : getListeners()) {
-				final ISelectionChangedListener selectionChangedListener = (ISelectionChangedListener) listener;
+			Object[] listeners = getListeners();
+			for (int i = 0; i < listeners.length; ++i) {
+				final ISelectionChangedListener l = (ISelectionChangedListener) listeners[i];
 				SafeRunner.run(new SafeRunnable() {
 					@Override
 					public void run() {
-						selectionChangedListener.selectionChanged(event);
+						l.selectionChanged(event);
 					}
 				});
 			}
@@ -263,12 +278,18 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 		private SelectionManager fPostSelectionListeners = new SelectionManager();
 
+		/*
+		 * (non-Javadoc) Method declared on ISelectionProvider.
+		 */
 		@Override
 		public void addSelectionChangedListener(
 				ISelectionChangedListener listener) {
 			fSelectionListener.addSelectionChangedListener(listener);
 		}
 
+		/*
+		 * (non-Javadoc) Method declared on ISelectionProvider.
+		 */
 		@Override
 		public ISelection getSelection() {
 			// get the selection provider from the current page
@@ -289,6 +310,9 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 			return StructuredSelection.EMPTY;
 		}
 
+		/*
+		 * (non-Javadoc) Method declared on ISelectionProvider.
+		 */
 		@Override
 		public void removeSelectionChangedListener(
 				ISelectionChangedListener listener) {
@@ -316,6 +340,9 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 			fPostSelectionListeners.selectionChanged(event);
 		}
 
+		/*
+		 * (non-Javadoc) Method declared on ISelectionProvider.
+		 */
 		@Override
 		public void setSelection(ISelection selection) {
 			// get the selection provider from the current page
@@ -336,12 +363,22 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 			}
 		}
 
+		/*
+		 * (non-Javadoc)
+		 *
+		 * @see org.eclipse.jface.viewers.IPostSelectionProvider#addPostSelectionChangedListener(org.eclipse.jface.viewers.ISelectionChangedListener)
+		 */
 		@Override
 		public void addPostSelectionChangedListener(
 				ISelectionChangedListener listener) {
 			fPostSelectionListeners.addSelectionChangedListener(listener);
 		}
 
+		/*
+		 * (non-Javadoc)
+		 *
+		 * @see org.eclipse.jface.viewers.IPostSelectionProvider#removePostSelectionChangedListener(org.eclipse.jface.viewers.ISelectionChangedListener)
+		 */
 		@Override
 		public void removePostSelectionChangedListener(
 				ISelectionChangedListener listener) {
@@ -414,14 +451,14 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 			// for backward compability with IPage
 			rec.page.setActionBars(rec.subActionBars);
 
-			count = Integer.valueOf(0);
+			count = new Integer(0);
 		} else {
 			site = (IPageSite) mapPageToSite.get(rec.page);
 			rec.subActionBars = (SubActionBars) site.getActionBars();
 			count = ((Integer) mapPageToNumRecs.get(rec.page));
 		}
 
-		mapPageToNumRecs.put(rec.page, Integer.valueOf(count.intValue() + 1));
+		mapPageToNumRecs.put(rec.page, new Integer(count.intValue() + 1));
 	}
 
 	/**
@@ -554,7 +591,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	public <T> T getAdapter(Class<T> key) {
 		// delegate to the current page, if supported
 		IPage page = getCurrentPage();
-		T adapter = Adapters.adapt(page, key);
+		T adapter = Util.getAdapter(page, key);
 		if (adapter != null) {
 			return adapter;
 		}
@@ -705,6 +742,9 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 */
 	protected abstract boolean isImportant(IWorkbenchPart part);
 
+	/*
+	 * (non-Javadoc) Method declared on IViewPart.
+	 */
 	@Override
 	public void init(IViewSite site) throws PartInitException {
 		site.setSelectionProvider(selectionProvider);
@@ -788,6 +828,11 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 		// Do nothing.
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.ui.IPartListener#partOpened(org.eclipse.ui.IWorkbenchPart)
+	 */
 	@Override
 	public void partOpened(IWorkbenchPart part) {
 		// Do nothing by default.
@@ -857,10 +902,13 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 				((PageSite) site).dispose();
 			}
 		} else {
-			mapPageToNumRecs.put(rec.page, Integer.valueOf(newCount));
+			mapPageToNumRecs.put(rec.page, new Integer(newCount));
 		}
 	}
 
+	/*
+	 * (non-Javadoc) Method declared on IWorkbenchPart.
+	 */
 	@Override
 	public void setFocus() {
 		// first set focus on the page book, in case the page
@@ -1100,8 +1148,8 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 		if (viewStack == null) {
 			return false;
 		}
-		for (IViewPart viewPart : viewStack) {
-			if (viewPart == part) {
+		for (int i = 0; i < viewStack.length; i++) {
+			if (viewStack[i] == part) {
 				return true;
 			}
 		}
