@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2015 Tom Schindl and others.
+ * Copyright (c) 2006, 2014 Tom Schindl and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -10,7 +10,6 @@
  *     Dinko Ivanov - bug 164365
  *     Jeanderson Candido <http://jeandersonbc.github.io> - Bug 414565
  *     Simon Scholz <simon.scholz@vogella.com> - Bug 448143
- *     Lars Vogel <Lars.Vogel@vogella.com> - Bug 475361, 489234
  *******************************************************************************/
 
 package org.eclipse.jface.snippets.viewers;
@@ -72,7 +71,7 @@ public class Snippet027ComboBoxCellEditors {
 			@Override
 			protected Object getValue(Object element) {
 				// We need to calculate back to the index
-				return Integer.valueOf(((MyModel) element).counter / 10);
+				return new Integer(((MyModel) element).counter / 10);
 			}
 
 			@Override
@@ -94,7 +93,7 @@ public class Snippet027ComboBoxCellEditors {
 	}
 
 	private List<MyModel> createModel() {
-		List<MyModel> elements = new ArrayList<>();
+		List<MyModel> elements = new ArrayList<MyModel>();
 
 		for (int i = 0; i < 10; i++) {
 			elements.add(new MyModel(i * 10));
