@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2005, 2017 IBM Corporation and others.
+ * Copyright (c) 2005, 2014 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -32,9 +32,19 @@ public class Mocks {
 		public boolean equals(Object o1, Object o2);
 	}
 
-	private static EqualityComparator defaultEqualityComparator = (o1, o2) -> o1 == null ? o2 == null : o1.equals(o2);
+	private static EqualityComparator defaultEqualityComparator = new EqualityComparator() {
+		@Override
+		public boolean equals(Object o1, Object o2) {
+			return o1 == null ? o2 == null : o1.equals(o2);
+		}
+	};
 
-	private static EqualityComparator indifferentEqualityComparator = (o1, o2) -> true;
+	private static EqualityComparator indifferentEqualityComparator = new EqualityComparator() {
+		@Override
+		public boolean equals(Object o1, Object o2) {
+			return true;
+		}
+	};
 
 	private static interface Mock {
 		public MockInvocationHandler getMockInvocationHandler();
@@ -108,7 +118,7 @@ public class Mocks {
 
 		List<MethodCall> previousCallHistory = null;
 
-		List<MethodCall> currentCallHistory = new ArrayList<>();
+		List<MethodCall> currentCallHistory = new ArrayList<MethodCall>();
 
 		private final boolean ordered;
 
@@ -127,7 +137,7 @@ public class Mocks {
 				return this;
 			}
 			if (equalsMethod.equals(method)) {
-				return Boolean.valueOf(proxy == args[0]);
+				return new Boolean(proxy == args[0]);
 			}
 			MethodCall methodCall = new MethodCall(method, args);
 			if (previousCallHistory != null) {
@@ -176,7 +186,7 @@ public class Mocks {
 							: new Short((short) 0);
 				} else if (returnType == int.class) {
 					result = (returnValue != null) ? (Integer) returnValue
-							: Integer.valueOf(0);
+							: new Integer(0);
 				} else if (returnType == long.class) {
 					result = (returnValue != null) ? (Long) returnValue
 							: new Long(0);
@@ -195,7 +205,7 @@ public class Mocks {
 
 		public void replay() {
 			previousCallHistory = currentCallHistory;
-			currentCallHistory = new ArrayList<>();
+			currentCallHistory = new ArrayList<MethodCall>();
 		}
 
 		public void verify() {
@@ -234,7 +244,7 @@ public class Mocks {
 
 		public void reset() {
 			previousCallHistory = null;
-			currentCallHistory = new ArrayList<>();
+			currentCallHistory = new ArrayList<MethodCall>();
 		}
 
 		public void setLastReturnValue(Object object) {
