@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2017 IBM Corporation and others.
+ * Copyright (c) 2000, 2006 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -18,18 +18,21 @@ import org.eclipse.core.resources.IFile;
 import org.eclipse.core.resources.IResource;
 import org.eclipse.core.resources.IWorkspace;
 import org.eclipse.core.resources.ResourcesPlugin;
-import org.eclipse.core.runtime.Adapters;
 import org.eclipse.core.runtime.IAdaptable;
 import org.eclipse.core.runtime.IPath;
+import org.eclipse.core.runtime.Platform;
+import org.eclipse.jface.action.IMenuListener;
 import org.eclipse.jface.action.IMenuManager;
 import org.eclipse.jface.action.MenuManager;
 import org.eclipse.jface.dialogs.IDialogSettings;
 import org.eclipse.jface.preference.IPreferenceStore;
 import org.eclipse.jface.viewers.DecoratingLabelProvider;
 import org.eclipse.jface.viewers.DoubleClickEvent;
+import org.eclipse.jface.viewers.IDoubleClickListener;
 import org.eclipse.jface.viewers.ILabelDecorator;
 import org.eclipse.jface.viewers.ILabelProvider;
 import org.eclipse.jface.viewers.ISelection;
+import org.eclipse.jface.viewers.ISelectionChangedListener;
 import org.eclipse.jface.viewers.IStructuredSelection;
 import org.eclipse.jface.viewers.SelectionChangedEvent;
 import org.eclipse.jface.viewers.StructuredSelection;
@@ -52,8 +55,8 @@ import org.eclipse.ui.IViewSite;
 import org.eclipse.ui.IWorkbenchPage;
 import org.eclipse.ui.IWorkbenchPart;
 import org.eclipse.ui.PartInitException;
+import org.eclipse.ui.PlatformUI;
 import org.eclipse.ui.actions.ActionContext;
-import org.eclipse.ui.internal.WorkbenchPlugin;
 import org.eclipse.ui.internal.views.navigator.ResourceNavigatorMessages;
 import org.eclipse.ui.part.DrillDownAdapter;
 import org.eclipse.ui.part.ViewPart;
@@ -124,12 +127,19 @@ public class AdaptedResourceNavigator extends ViewPart {
      * where the elements are resources.
      */
     StructuredSelection convertSelection(ISelection selection) {
-		ArrayList<IResource> list = new ArrayList<>();
+        ArrayList list = new ArrayList();
         if (selection instanceof IStructuredSelection) {
             IStructuredSelection ssel = (IStructuredSelection) selection;
-			for (Iterator<?> i = ssel.iterator(); i.hasNext();) {
+            for (Iterator i = ssel.iterator(); i.hasNext();) {
                 Object o = i.next();
-				IResource resource = Adapters.adapt(o, IResource.class);
+                IResource resource = null;
+                if (o instanceof IResource) {
+                    resource = (IResource) o;
+                } else {
+                    if (o instanceof IAdaptable) {
+						resource = ((IAdaptable) o).getAdapter(IResource.class);
+                    }
+                }
                 if (resource != null) {
                     list.add(resource);
                 }
@@ -155,7 +165,12 @@ public class AdaptedResourceNavigator extends ViewPart {
 
         MenuManager menuMgr = new MenuManager("#PopupMenu"); //$NON-NLS-1$
         menuMgr.setRemoveAllWhenShown(true);
-		menuMgr.addMenuListener(manager1 -> AdaptedResourceNavigator.this.fillContextMenu(manager1));
+        menuMgr.addMenuListener(new IMenuListener() {
+            @Override
+			public void menuAboutToShow(IMenuManager manager) {
+                AdaptedResourceNavigator.this.fillContextMenu(manager);
+            }
+        });
         Menu menu = menuMgr.createContextMenu(viewer.getTree());
         viewer.getTree().setMenu(menu);
         getSite().registerContextMenu(menuMgr, viewer);
@@ -164,11 +179,22 @@ public class AdaptedResourceNavigator extends ViewPart {
 
         // Update the global action enable state to match
         // the current selection.
-		IStructuredSelection selection = viewer.getStructuredSelection();
+        IStructuredSelection selection = (IStructuredSelection) viewer
+                .getSelection();
         actionGroup.updateGlobalActions(selection);
 
-		viewer.addSelectionChangedListener(event -> handleSelectionChanged(event));
-		viewer.addDoubleClickListener(event -> handleDoubleClick(event));
+        viewer.addSelectionChangedListener(new ISelectionChangedListener() {
+            @Override
+			public void selectionChanged(SelectionChangedEvent event) {
+                handleSelectionChanged(event);
+            }
+        });
+        viewer.addDoubleClickListener(new IDoubleClickListener() {
+            @Override
+			public void doubleClick(DoubleClickEvent event) {
+                handleDoubleClick(event);
+            }
+        });
         viewer.getControl().addKeyListener(new KeyListener() {
             @Override
 			public void keyPressed(KeyEvent event) {
@@ -237,7 +263,12 @@ public class AdaptedResourceNavigator extends ViewPart {
      */
     IContainer getInitialInput() {
         IAdaptable input = getSite().getPage().getInput();
-		IResource resource = Adapters.adapt(input, IResource.class);
+        IResource resource = null;
+        if (input instanceof IResource) {
+            resource = (IResource) input;
+        } else {
+			resource = input.getAdapter(IResource.class);
+        }
         if (resource != null) {
             switch (resource.getType()) {
             case IResource.FILE:
@@ -258,7 +289,7 @@ public class AdaptedResourceNavigator extends ViewPart {
      * Returns the navigator's plugin.
      */
     public AbstractUIPlugin getPlugin() {
-		return WorkbenchPlugin.getDefault();
+        return (AbstractUIPlugin) Platform.getPlugin(PlatformUI.PLUGIN_ID);
     }
 
     /**
@@ -300,7 +331,7 @@ public class AdaptedResourceNavigator extends ViewPart {
 			return ResourceNavigatorMessages.ResourceNavigator_oneItemSelected;
         }
         if (selection.size() > 1) {
-            return NLS.bind(ResourceNavigatorMessages.ResourceNavigator_statusLine, Integer.valueOf(selection.size()));
+            return NLS.bind(ResourceNavigatorMessages.ResourceNavigator_statusLine, new Integer(selection.size()));
         }
         return ""; //$NON-NLS-1$
     }
@@ -327,7 +358,7 @@ public class AdaptedResourceNavigator extends ViewPart {
      */
     protected void handleDoubleClick(DoubleClickEvent event) {
         IStructuredSelection selection = (IStructuredSelection) event
-				.getSelection();
+                .getSelection();
         Object element = selection.getFirstElement();
 
         // 1GBZIA0: ITPUI:WIN2000 - Double-clicking in navigator should expand/collapse containers
