@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2017 IBM Corporation and others.
+ * Copyright (c) 2000, 2014 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -11,10 +11,12 @@
  *******************************************************************************/
 package org.eclipse.ui.tests.api;
 
+import junit.framework.Assert;
+import junit.framework.TestCase;
+
 import org.eclipse.ui.IMemento;
 import org.eclipse.ui.IViewPart;
 import org.eclipse.ui.IViewSite;
-import org.junit.Assert;
 
 /**
  * This view is used to test the creation and restoration of
@@ -75,7 +77,7 @@ public class SessionView extends MockViewPart {
     /**
      * Restore an IMemento.
      */
-	public void testMementoState() {
+    public void testMementoState(TestCase testCase) {
         // Verify that the memento was passed to us in
         // constructor.
         Assert.assertNotNull(memento);
@@ -87,7 +89,7 @@ public class SessionView extends MockViewPart {
 
         // Read int.
         Integer bigInt = memento.getInteger("integer");
-        Assert.assertEquals(bigInt, Integer.valueOf(50));
+        Assert.assertEquals(bigInt, new Integer(50));
 
         // Read string.
         String str = memento.getString("string");
@@ -97,7 +99,7 @@ public class SessionView extends MockViewPart {
         IMemento child = memento.getChild("single");
         Assert.assertNotNull(child);
         bigInt = child.getInteger("id");
-        Assert.assertEquals(bigInt, Integer.valueOf(1));
+        Assert.assertEquals(bigInt, new Integer(1));
 
         // Read multiple children.
         bigInt = memento.getInteger("multiple.count");
@@ -109,7 +111,7 @@ public class SessionView extends MockViewPart {
             child = children[nX];
             Assert.assertNotNull(child);
             bigInt = child.getInteger("id");
-            Assert.assertEquals(bigInt, Integer.valueOf(nX));
+            Assert.assertEquals(bigInt, new Integer(nX));
         }
     }
 }
