@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2017 IBM Corporation and others.
+ * Copyright (c) 2007, 2009 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -20,6 +20,7 @@ import org.eclipse.core.commands.ParameterizedCommand;
 import org.eclipse.jface.bindings.Binding;
 import org.eclipse.jface.bindings.keys.KeyBinding;
 import org.eclipse.jface.bindings.keys.KeySequence;
+import org.eclipse.jface.util.IPropertyChangeListener;
 import org.eclipse.jface.util.PropertyChangeEvent;
 import org.eclipse.ui.contexts.IContextService;
 import org.eclipse.ui.internal.keys.model.BindingElement;
@@ -66,9 +67,9 @@ public class KeysPreferenceModelTest extends UITestCase {
 		ContextModel cm = controller.getContextModel();
 		boolean foundWindow = false;
 		boolean foundDialog = false;
-		Iterator<ContextElement> i = cm.getContexts().iterator();
+		Iterator i = cm.getContexts().iterator();
 		while (i.hasNext()) {
-			ContextElement elem = i.next();
+			ContextElement elem = (ContextElement) i.next();
 			if (elem.getId().equals(IContextService.CONTEXT_ID_WINDOW)) {
 				foundWindow = true;
 			} else if (elem.getId().equals(IContextService.CONTEXT_ID_DIALOG)) {
@@ -83,9 +84,9 @@ public class KeysPreferenceModelTest extends UITestCase {
 
 		SchemeModel sm = controller.getSchemeModel();
 		boolean foundDefault = false;
-		Iterator<SchemeElement> i2 = sm.getSchemes().iterator();
-		while (i2.hasNext()) {
-			SchemeElement e = i2.next();
+		i = sm.getSchemes().iterator();
+		while (i.hasNext()) {
+			SchemeElement e = (SchemeElement) i.next();
 			if (e.getId().equals(
 					IBindingService.DEFAULT_DEFAULT_ACTIVE_SCHEME_ID)) {
 				foundDefault = true;
@@ -115,9 +116,14 @@ public class KeysPreferenceModelTest extends UITestCase {
 		assertNull(cm.getSelectedElement());
 		assertNotNull(dialog);
 
-		final ArrayList<PropertyChangeEvent> events = new ArrayList<>();
+		final ArrayList events = new ArrayList();
 		// test setup vars
-		controller.addPropertyChangeListener(event -> events.add(event));
+		controller.addPropertyChangeListener(new IPropertyChangeListener() {
+			@Override
+			public void propertyChange(PropertyChangeEvent event) {
+				events.add(event);
+			}
+		});
 		cm.setSelectedElement(dialog);
 
 		assertTrue(cm.getSelectedElement() == dialog);
@@ -157,8 +163,13 @@ public class KeysPreferenceModelTest extends UITestCase {
 		assertNull(bm.getSelectedElement());
 
 		// test setup vars
-		final ArrayList<PropertyChangeEvent> events = new ArrayList<>();
-		controller.addPropertyChangeListener(event -> events.add(event));
+		final ArrayList events = new ArrayList();
+		controller.addPropertyChangeListener(new IPropertyChangeListener() {
+			@Override
+			public void propertyChange(PropertyChangeEvent event) {
+				events.add(event);
+			}
+		});
 
 		bm.setSelectedElement(activateEditor);
 
@@ -206,14 +217,19 @@ public class KeysPreferenceModelTest extends UITestCase {
 		assertEquals(Boolean.FALSE, activateEditor.getConflict());
 
 		// test setup vars
-		final ArrayList<PropertyChangeEvent> events = new ArrayList<>();
-		controller.addPropertyChangeListener(event -> events.add(event));
+		final ArrayList events = new ArrayList();
+		controller.addPropertyChangeListener(new IPropertyChangeListener() {
+			@Override
+			public void propertyChange(PropertyChangeEvent event) {
+				events.add(event);
+			}
+		});
 
 		bm.setSelectedElement(conflict1);
 		assertEquals(conflict1, bm.getSelectedElement());
 		assertEquals(conflict1, cf.getSelectedElement());
 
-		final Collection<?> conflicts = cf.getConflicts();
+		final Collection conflicts = cf.getConflicts();
 		assertEquals(3, conflicts.size());
 
 		PropertyChangeEvent[] expected = new PropertyChangeEvent[] {
@@ -259,8 +275,13 @@ public class KeysPreferenceModelTest extends UITestCase {
 		final BindingElement conflict3 = getBindingElement(bm, ID_CMD_CONFLICT3);
 
 		// test setup vars
-		final ArrayList<PropertyChangeEvent> events = new ArrayList<>();
-		controller.addPropertyChangeListener(event -> events.add(event));
+		final ArrayList events = new ArrayList();
+		controller.addPropertyChangeListener(new IPropertyChangeListener() {
+			@Override
+			public void propertyChange(PropertyChangeEvent event) {
+				events.add(event);
+			}
+		});
 
 		bm.setSelectedElement(conflict1);
 		assertEquals(conflict1, bm.getSelectedElement());
@@ -398,8 +419,13 @@ public class KeysPreferenceModelTest extends UITestCase {
 		assertEquals(dialog, cm.getSelectedElement());
 
 		// test setup vars
-		final ArrayList<PropertyChangeEvent> events = new ArrayList<>();
-		controller.addPropertyChangeListener(event -> events.add(event));
+		final ArrayList events = new ArrayList();
+		controller.addPropertyChangeListener(new IPropertyChangeListener() {
+			@Override
+			public void propertyChange(PropertyChangeEvent event) {
+				events.add(event);
+			}
+		});
 
 		cm.setSelectedElement(window);
 		assertEquals(window, ((BindingElement) bm.getSelectedElement())
@@ -413,8 +439,8 @@ public class KeysPreferenceModelTest extends UITestCase {
 				new PropertyChangeEvent(conflict2, BindingElement.PROP_CONTEXT,
 						dialog, window),
 				new PropertyChangeEvent(conflict2,
-						BindingElement.PROP_USER_DELTA, Integer.valueOf(
-								Binding.SYSTEM), Integer.valueOf(Binding.USER)),
+						BindingElement.PROP_USER_DELTA, new Integer(
+								Binding.SYSTEM), new Integer(Binding.USER)),
 				new PropertyChangeEvent(conflict2,
 						ModelElement.PROP_MODEL_OBJECT, c2model, conflict2
 								.getModelObject()),
@@ -445,15 +471,20 @@ public class KeysPreferenceModelTest extends UITestCase {
 		assertEquals(dialog, cm.getSelectedElement());
 
 		// test setup vars
-		final ArrayList<PropertyChangeEvent> events = new ArrayList<>();
-		controller.addPropertyChangeListener(event -> events.add(event));
+		final ArrayList events = new ArrayList();
+		controller.addPropertyChangeListener(new IPropertyChangeListener() {
+			@Override
+			public void propertyChange(PropertyChangeEvent event) {
+				events.add(event);
+			}
+		});
 
 		KeySequence oldKeySequence = (KeySequence) conflict2.getTrigger();
 		KeySequence ctrl5 = KeySequence.getInstance("CTRL+5 N");
 		Object bindingConflict1 = conflict1.getModelObject();
 		conflict2.setTrigger(ctrl5);
 		ConflictModel conflictModel = controller.getConflictModel();
-		ArrayList<BindingElement> oldValue = new ArrayList<>();
+		ArrayList oldValue = new ArrayList();
 		oldValue.add(conflict3);
 
 		assertEquals(dialog, ((BindingElement) bm.getSelectedElement())
@@ -464,8 +495,8 @@ public class KeysPreferenceModelTest extends UITestCase {
 						BindingElement.PROP_CONFLICT, Boolean.TRUE,
 						Boolean.FALSE),
 				new PropertyChangeEvent(conflict2,
-						BindingElement.PROP_USER_DELTA, Integer.valueOf(
-								Binding.SYSTEM), Integer.valueOf(Binding.USER)),
+						BindingElement.PROP_USER_DELTA, new Integer(
+								Binding.SYSTEM), new Integer(Binding.USER)),
 				new PropertyChangeEvent(controller.getConflictModel(),
 						ConflictModel.PROP_CONFLICTS_REMOVE, null, conflict2),
 				new PropertyChangeEvent(conflict2,
@@ -523,8 +554,13 @@ public class KeysPreferenceModelTest extends UITestCase {
 		assertNull(cm.getSelectedElement());
 
 		// test setup vars
-		final ArrayList<PropertyChangeEvent> events = new ArrayList<>();
-		controller.addPropertyChangeListener(event -> events.add(event));
+		final ArrayList events = new ArrayList();
+		controller.addPropertyChangeListener(new IPropertyChangeListener() {
+			@Override
+			public void propertyChange(PropertyChangeEvent event) {
+				events.add(event);
+			}
+		});
 
 		KeySequence ctrl5 = KeySequence.getInstance("CTRL+5 N");
 		conflict4.setTrigger(ctrl5);
@@ -537,8 +573,8 @@ public class KeysPreferenceModelTest extends UITestCase {
 				new PropertyChangeEvent(conflict4, BindingElement.PROP_CONTEXT,
 						null, window),
 				new PropertyChangeEvent(conflict4,
-						BindingElement.PROP_USER_DELTA, Integer.valueOf(
-								Binding.SYSTEM), Integer.valueOf(Binding.USER)),
+						BindingElement.PROP_USER_DELTA, new Integer(
+								Binding.SYSTEM), new Integer(Binding.USER)),
 				new PropertyChangeEvent(cm, CommonModel.PROP_SELECTED_ELEMENT,
 						null, conflict4.getContext()),
 				new PropertyChangeEvent(conflict4,
@@ -555,9 +591,9 @@ public class KeysPreferenceModelTest extends UITestCase {
 
 		SchemeModel sm = controller.getSchemeModel();
 		SchemeElement emacsScheme = null;
-		Iterator<SchemeElement> i = sm.getSchemes().iterator();
+		Iterator i = sm.getSchemes().iterator();
 		while (i.hasNext()) {
-			SchemeElement e = i.next();
+			SchemeElement e = (SchemeElement) i.next();
 			if (e.getId().equals(SCHEME_EMACS_ID)) {
 				emacsScheme = e;
 			}
@@ -567,9 +603,9 @@ public class KeysPreferenceModelTest extends UITestCase {
 		BindingModel bm = controller.getBindingModel();
 		BindingElement quickSwitch = null;
 		int quickCount = 0;
-		Iterator<BindingElement> i2 = bm.getBindings().iterator();
-		while (i2.hasNext()) {
-			BindingElement e = i2.next();
+		i = bm.getBindings().iterator();
+		while (i.hasNext()) {
+			BindingElement e = (BindingElement) i.next();
 			if (e.getId().equals(ID_QUICK_SWITCH)) {
 				quickSwitch = e;
 				quickCount++;
@@ -580,11 +616,11 @@ public class KeysPreferenceModelTest extends UITestCase {
 
 		sm.setSelectedElement(emacsScheme);
 
-		i2 = bm.getBindings().iterator();
-		ArrayList<BindingElement> quick2 = new ArrayList<>();
+		i = bm.getBindings().iterator();
+		ArrayList quick2 = new ArrayList();
 		boolean foundOriginal = false;
-		while (i2.hasNext()) {
-			BindingElement e = i2.next();
+		while (i.hasNext()) {
+			BindingElement e = (BindingElement) i.next();
 			if (e.getId().equals(ID_QUICK_SWITCH)) {
 				quick2.add(e);
 				if (e == quickSwitch) {
@@ -603,9 +639,9 @@ public class KeysPreferenceModelTest extends UITestCase {
 		SchemeModel sm = controller.getSchemeModel();
 		SchemeElement emacsScheme = null;
 		SchemeElement defaultScheme = null;
-		Iterator<SchemeElement> i = sm.getSchemes().iterator();
+		Iterator i = sm.getSchemes().iterator();
 		while (i.hasNext()) {
-			SchemeElement e = i.next();
+			SchemeElement e = (SchemeElement) i.next();
 			if (e.getId().equals(SCHEME_EMACS_ID)) {
 				emacsScheme = e;
 			} else if (e.getId().equals(
@@ -619,9 +655,9 @@ public class KeysPreferenceModelTest extends UITestCase {
 		BindingModel bm = controller.getBindingModel();
 		BindingElement quickSwitch = null;
 		int quickCount = 0;
-		Iterator<BindingElement> i2 = bm.getBindings().iterator();
-		while (i2.hasNext()) {
-			BindingElement e = i2.next();
+		i = bm.getBindings().iterator();
+		while (i.hasNext()) {
+			BindingElement e = (BindingElement) i.next();
 			if (e.getId().equals(ID_QUICK_SWITCH)) {
 				quickSwitch = e;
 				quickCount++;
@@ -632,11 +668,11 @@ public class KeysPreferenceModelTest extends UITestCase {
 
 		sm.setSelectedElement(emacsScheme);
 
-		i2 = bm.getBindings().iterator();
-		ArrayList<BindingElement> quick2 = new ArrayList<>();
+		i = bm.getBindings().iterator();
+		ArrayList quick2 = new ArrayList();
 		boolean foundOriginal = false;
-		while (i2.hasNext()) {
-			BindingElement e = i2.next();
+		while (i.hasNext()) {
+			BindingElement e = (BindingElement) i.next();
 			if (e.getId().equals(ID_QUICK_SWITCH)) {
 				quick2.add(e);
 				if (e == quickSwitch) {
@@ -649,11 +685,11 @@ public class KeysPreferenceModelTest extends UITestCase {
 
 		sm.setSelectedElement(defaultScheme);
 
-		i2 = bm.getBindings().iterator();
+		i = bm.getBindings().iterator();
 		quick2.clear();
 		foundOriginal = false;
-		while (i2.hasNext()) {
-			BindingElement e = i2.next();
+		while (i.hasNext()) {
+			BindingElement e = (BindingElement) i.next();
 			if (e.getId().equals(ID_QUICK_SWITCH)) {
 				quick2.add(e);
 				if (e == quickSwitch) {
@@ -672,9 +708,9 @@ public class KeysPreferenceModelTest extends UITestCase {
 		final SchemeModel sm = controller.getSchemeModel();
 		SchemeElement emacsScheme = null;
 		SchemeElement defaultScheme = null;
-		Iterator<SchemeElement> i = sm.getSchemes().iterator();
+		Iterator i = sm.getSchemes().iterator();
 		while (i.hasNext()) {
-			SchemeElement e = i.next();
+			SchemeElement e = (SchemeElement) i.next();
 			if (e.getId().equals(SCHEME_EMACS_ID)) {
 				emacsScheme = e;
 			} else if (e.getId().equals(
@@ -707,10 +743,10 @@ public class KeysPreferenceModelTest extends UITestCase {
 
 		BindingModel bm = controller.getBindingModel();
 		BindingElement activateEditor = null;
-		ArrayList<BindingElement> activates = new ArrayList<>();
-		Iterator<BindingElement> i = bm.getBindings().iterator();
+		ArrayList activates = new ArrayList();
+		Iterator i = bm.getBindings().iterator();
 		while (i.hasNext()) {
-			BindingElement be = i.next();
+			BindingElement be = (BindingElement) i.next();
 			if (be.getId().equals(ID_ACTIVATE_EDITOR)) {
 				activates.add(be);
 				if (be.getModelObject() instanceof KeyBinding) {
@@ -726,7 +762,7 @@ public class KeysPreferenceModelTest extends UITestCase {
 		activates.clear();
 		i = bm.getBindings().iterator();
 		while (i.hasNext()) {
-			BindingElement be = i.next();
+			BindingElement be = (BindingElement) i.next();
 			if (be.getId().equals(ID_ACTIVATE_EDITOR)) {
 				activates.add(be);
 			}
@@ -740,10 +776,10 @@ public class KeysPreferenceModelTest extends UITestCase {
 
 		BindingModel bm = controller.getBindingModel();
 		BindingElement conflict4 = null;
-		ArrayList<BindingElement> activates = new ArrayList<>();
-		Iterator<BindingElement> i = bm.getBindings().iterator();
+		ArrayList activates = new ArrayList();
+		Iterator i = bm.getBindings().iterator();
 		while (i.hasNext()) {
-			BindingElement be = i.next();
+			BindingElement be = (BindingElement) i.next();
 			if (be.getId().equals(ID_CMD_CONFLICT4)) {
 				activates.add(be);
 				if (be.getModelObject() instanceof ParameterizedCommand) {
@@ -759,7 +795,7 @@ public class KeysPreferenceModelTest extends UITestCase {
 		activates.clear();
 		i = bm.getBindings().iterator();
 		while (i.hasNext()) {
-			BindingElement be = i.next();
+			BindingElement be = (BindingElement) i.next();
 			if (be.getId().equals(ID_CMD_CONFLICT4)) {
 				activates.add(be);
 			}
@@ -797,18 +833,18 @@ public class KeysPreferenceModelTest extends UITestCase {
 		KeySequence ctrl5 = KeySequence.getInstance("CTRL+5 N");
 		activateEditor.setTrigger(ctrl5);
 
-		assertEquals(Integer.valueOf(Binding.USER), activateEditor.getUserDelta());
+		assertEquals(new Integer(Binding.USER), activateEditor.getUserDelta());
 		bm.copy();
 		BindingElement activeTwo = (BindingElement) bm.getSelectedElement();
 		assertFalse(activateEditor == activeTwo);
 
 		activeTwo.setTrigger(KeySequence.getInstance("CTRL+5 M"));
-		assertEquals(Integer.valueOf(Binding.USER), activeTwo.getUserDelta());
+		assertEquals(new Integer(Binding.USER), activeTwo.getUserDelta());
 
-		ArrayList<BindingElement> activates = new ArrayList<>();
-		Iterator<BindingElement> i = bm.getBindings().iterator();
+		ArrayList activates = new ArrayList();
+		Iterator i = bm.getBindings().iterator();
 		while (i.hasNext()) {
-			BindingElement be = i.next();
+			BindingElement be = (BindingElement) i.next();
 			if (be.getId().equals(ID_ACTIVATE_EDITOR)) {
 				activates.add(be);
 			}
@@ -817,17 +853,17 @@ public class KeysPreferenceModelTest extends UITestCase {
 
 		bm.restoreBinding(controller.getContextModel());
 
-		activates = new ArrayList<>();
+		activates = new ArrayList();
 		i = bm.getBindings().iterator();
 		while (i.hasNext()) {
-			BindingElement be = i.next();
+			BindingElement be = (BindingElement) i.next();
 			if (be.getId().equals(ID_ACTIVATE_EDITOR)) {
 				activates.add(be);
 				activateEditor = be;
 			}
 		}
 		assertEquals(1, activates.size());
-		assertEquals(Integer.valueOf(Binding.SYSTEM), activateEditor.getUserDelta());
+		assertEquals(new Integer(Binding.SYSTEM), activateEditor.getUserDelta());
 	}
 
 	public void testRestoreCommand() throws Exception {
@@ -892,19 +928,19 @@ public class KeysPreferenceModelTest extends UITestCase {
 				.getNewValue());
 	}
 
-	private void assertChanges(PropertyChangeEvent[] expected, List<PropertyChangeEvent> events) {
+	private void assertChanges(PropertyChangeEvent[] expected, List events) {
 		assertEquals("events length", expected.length, events.size());
 		for (int i = 0; i < expected.length; i++) {
-			assertChangeEvent(i, expected[i], events
+			assertChangeEvent(i, expected[i], (PropertyChangeEvent) events
 					.get(i));
 		}
 	}
 
 	private BindingElement getBindingElement(BindingModel bm, String bindingId) {
 		BindingElement quickAccess = null;
-		Iterator<BindingElement> i = bm.getBindings().iterator();
+		Iterator i = bm.getBindings().iterator();
 		while (i.hasNext()) {
-			BindingElement e = i.next();
+			BindingElement e = (BindingElement) i.next();
 			if (e.getId().equals(bindingId)) {
 				quickAccess = e;
 			}
