@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2008, 2017 IBM Corporation and others.
+ * Copyright (c) 2008 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -63,24 +63,24 @@ public class MarkerTesterTest extends UITestCase {
 	public void testSeverity() throws Exception {
 
 		IMarker errorMarker = project.createMarker(IMarker.PROBLEM);
-		Map<String, Object> attributes = new HashMap<>();
-		attributes.put(IMarker.SEVERITY, Integer.valueOf(IMarker.SEVERITY_ERROR));
+		Map attributes = new HashMap();
+		attributes.put(IMarker.SEVERITY, new Integer(IMarker.SEVERITY_ERROR));
 		errorMarker.setAttributes(attributes);
 
 		EvaluationContext context = new EvaluationContext(null, errorMarker);
 		TestExpression testExpression = new TestExpression(MARKER_NAMESPACE,
-				"severity", null, Integer.valueOf(IMarker.SEVERITY_ERROR));
+				"severity", null, new Integer(IMarker.SEVERITY_ERROR));
 		EvaluationResult result = testExpression.evaluate(context);
 		assertEquals(EvaluationResult.TRUE, result);
 
 		IMarker warningMarker = project.createMarker(IMarker.PROBLEM);
-		attributes = new HashMap<>();
-		attributes.put(IMarker.SEVERITY, Integer.valueOf(IMarker.SEVERITY_WARNING));
+		attributes = new HashMap();
+		attributes.put(IMarker.SEVERITY, new Integer(IMarker.SEVERITY_WARNING));
 		warningMarker.setAttributes(attributes);
 
 		context = new EvaluationContext(null, warningMarker);
 		testExpression = new TestExpression(MARKER_NAMESPACE, "severity", null,
-				Integer.valueOf(IMarker.SEVERITY_WARNING));
+				new Integer(IMarker.SEVERITY_WARNING));
 		result = testExpression.evaluate(context);
 		assertEquals(EvaluationResult.TRUE, result);
 
@@ -124,24 +124,24 @@ public class MarkerTesterTest extends UITestCase {
 	public void testPriority() throws Exception {
 
 		IMarker highPriority = project.createMarker(IMarker.PROBLEM);
-		Map<String, Object> attributes = new HashMap<>();
-		attributes.put(IMarker.PRIORITY, Integer.valueOf(IMarker.PRIORITY_HIGH));
+		Map attributes = new HashMap();
+		attributes.put(IMarker.PRIORITY, new Integer(IMarker.PRIORITY_HIGH));
 		highPriority.setAttributes(attributes);
 
 		EvaluationContext context = new EvaluationContext(null, highPriority);
 		TestExpression testExpression = new TestExpression(MARKER_NAMESPACE,
-				"priority", null, Integer.valueOf(IMarker.PRIORITY_HIGH));
+				"priority", null, new Integer(IMarker.PRIORITY_HIGH));
 		EvaluationResult result = testExpression.evaluate(context);
 		assertEquals(EvaluationResult.TRUE, result);
 
 		IMarker lowPriority = project.createMarker(IMarker.PROBLEM);
-		attributes = new HashMap<>();
-		attributes.put(IMarker.PRIORITY, Integer.valueOf(IMarker.PRIORITY_LOW));
+		attributes = new HashMap();
+		attributes.put(IMarker.PRIORITY, new Integer(IMarker.PRIORITY_LOW));
 		lowPriority.setAttributes(attributes);
 
 		context = new EvaluationContext(null, lowPriority);
 		testExpression = new TestExpression(MARKER_NAMESPACE, "priority", null,
-				Integer.valueOf(IMarker.PRIORITY_LOW));
+				new Integer(IMarker.PRIORITY_LOW));
 		result = testExpression.evaluate(context);
 		assertEquals(EvaluationResult.TRUE, result);
 	}
@@ -149,7 +149,7 @@ public class MarkerTesterTest extends UITestCase {
 	public void testDone() throws Exception {
 
 		IMarker done = project.createMarker(IMarker.TASK);
-		Map<String, Object> attributes = new HashMap<>();
+		Map attributes = new HashMap();
 		attributes.put(IMarker.DONE, Boolean.TRUE);
 		done.setAttributes(attributes);
 
@@ -160,7 +160,7 @@ public class MarkerTesterTest extends UITestCase {
 		assertEquals(EvaluationResult.TRUE, result);
 
 		IMarker notDone = project.createMarker(IMarker.TASK);
-		attributes = new HashMap<>();
+		attributes = new HashMap();
 		attributes.put(IMarker.DONE, Boolean.FALSE);
 		notDone.setAttributes(attributes);
 
@@ -182,7 +182,7 @@ public class MarkerTesterTest extends UITestCase {
 	public void testMessage() throws Exception {
 
 		IMarker someTaskMarker = project.createMarker(IMarker.TASK);
-		Map<String, String> attributes = new HashMap<>();
+		Map attributes = new HashMap();
 		attributes.put(IMarker.MESSAGE, "Some nice message to test");
 		someTaskMarker.setAttributes(attributes);
 
@@ -217,13 +217,13 @@ public class MarkerTesterTest extends UITestCase {
 	public void testResourceType() throws Exception {
 
 		IMarker someTaskMarker = project.createMarker(IMarker.TASK);
-		Map<String, String> attributes = new HashMap<>();
+		Map attributes = new HashMap();
 		attributes.put(IMarker.MESSAGE, "Some nice message to test");
 		someTaskMarker.setAttributes(attributes);
 
 		EvaluationContext context = new EvaluationContext(null, someTaskMarker);
 		TestExpression testExpression = new TestExpression(MARKER_NAMESPACE,
-				"resourceType", null, Integer.valueOf(IResource.PROJECT));
+				"resourceType", null, new Integer(IResource.PROJECT));
 		EvaluationResult result = testExpression.evaluate(context);
 		assertEquals(EvaluationResult.TRUE, result);
 
@@ -231,13 +231,13 @@ public class MarkerTesterTest extends UITestCase {
 		folder.create(true, true, null);
 
 		IMarker someOtherMarker = folder.createMarker(IMarker.TASK);
-		attributes = new HashMap<>();
+		attributes = new HashMap();
 		attributes.put(IMarker.MESSAGE, "Some nice message to test");
 		someOtherMarker.setAttributes(attributes);
 
 		context = new EvaluationContext(null, someOtherMarker);
 		testExpression = new TestExpression(MARKER_NAMESPACE, "resourceType",
-				null, Integer.valueOf(IResource.FOLDER));
+				null, new Integer(IResource.FOLDER));
 		result = testExpression.evaluate(context);
 		assertEquals(EvaluationResult.TRUE, result);
 
