@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2004, 2017 IBM Corporation and others.
+ * Copyright (c) 2004, 2006 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -54,7 +54,7 @@ public class AddMarkersAction implements IWorkbenchWindowActionDelegate {
 				try {
 					IWorkspaceRoot root = ResourcesPlugin.getWorkspace()
 							.getRoot();
-					Map<String, Object> attribs = new HashMap<>();
+					Map attribs = new HashMap();
 					for (int i = 0; i < 1000; i++) {
 
 						if (i / 2 == 0) {
@@ -64,7 +64,7 @@ public class AddMarkersAction implements IWorkbenchWindowActionDelegate {
 									"Test Path " + i);
 						}
 
-						attribs.put(IMarker.SEVERITY, Integer.valueOf(
+						attribs.put(IMarker.SEVERITY, new Integer(
 								IMarker.SEVERITY_ERROR));
 						attribs.put(IMarker.MESSAGE, "this is a test " + i);
 						attribs.put(IMarker.LOCATION, "Location " + i);
@@ -76,7 +76,7 @@ public class AddMarkersAction implements IWorkbenchWindowActionDelegate {
 					return e.getStatus();
 				}
 				return Status.OK_STATUS;
-			}
+			};
 		};
 
 		addJob.schedule();
